--- a/css.html
+++ b/css.html
@@ -41,27 +41,27 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgec1bbd3">이 문서는</a></li>
-<li><a href="#orga549508">CSS를 HTML문서에 사용하기</a></li>
-<li><a href="#org7f71189">단어를 자르지 않기</a></li>
-<li><a href="#org547d409">둥근 모서리</a></li>
-<li><a href="#org8a0cf0d">div 블럭 가운데 정렬</a></li>
-<li><a href="#orgd7afd10">소수점 자리로 정렬</a></li>
+<li><a href="#orgda7aae6">이 문서는</a></li>
+<li><a href="#org3ab0c2b">CSS를 HTML문서에 사용하기</a></li>
+<li><a href="#org448286f">단어를 자르지 않기</a></li>
+<li><a href="#orgf823d03">둥근 모서리</a></li>
+<li><a href="#org3c41818">div 블럭 가운데 정렬</a></li>
+<li><a href="#org3ee99a8">소수점 자리로 정렬</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-orgec1bbd3" class="outline-2">
-<h2 id="orgec1bbd3">이 문서는</h2>
-<div class="outline-text-2" id="text-orgec1bbd3">
+<div id="outline-container-orgda7aae6" class="outline-2">
+<h2 id="orgda7aae6">이 문서는</h2>
+<div class="outline-text-2" id="text-orgda7aae6">
 <p>
 CSS 자체를 설명하기 보다는 CSS의 팁을 모아보는 페이지입니다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga549508" class="outline-2">
-<h2 id="orga549508">CSS를 HTML문서에 사용하기</h2>
-<div class="outline-text-2" id="text-orga549508">
+<div id="outline-container-org3ab0c2b" class="outline-2">
+<h2 id="org3ab0c2b">CSS를 HTML문서에 사용하기</h2>
+<div class="outline-text-2" id="text-org3ab0c2b">
 <p>
 HTML에 스타일을 등록하는 방법은 대략 3가지가 있습니다.
 </p>
@@ -126,9 +126,9 @@ p {
 </p>
 </div>
 </div>
-<div id="outline-container-org7f71189" class="outline-2">
-<h2 id="org7f71189">단어를 자르지 않기</h2>
-<div class="outline-text-2" id="text-org7f71189">
+<div id="outline-container-org448286f" class="outline-2">
+<h2 id="org448286f">단어를 자르지 않기</h2>
+<div class="outline-text-2" id="text-org448286f">
 <p>
 문장이 길어져서 다음 줄로 넘어갈 때 단어를 중간에 자르면 가독성에 문제가 있을 수
 있습니다. 이럴 때는 아래와 같은 스타일을 넣을 수 있습니다.
@@ -142,9 +142,9 @@ p {
 </p>
 </div>
 </div>
-<div id="outline-container-org547d409" class="outline-2">
-<h2 id="org547d409">둥근 모서리</h2>
-<div class="outline-text-2" id="text-org547d409">
+<div id="outline-container-orgf823d03" class="outline-2">
+<h2 id="orgf823d03">둥근 모서리</h2>
+<div class="outline-text-2" id="text-orgf823d03">
 <p>
 모서리를 둥글게 하려면 아래처럼 할 수 있습니다.
 </p>
@@ -157,9 +157,9 @@ p {
 </p>
 </div>
 </div>
-<div id="outline-container-org8a0cf0d" class="outline-2">
-<h2 id="org8a0cf0d">div 블럭 가운데 정렬</h2>
-<div class="outline-text-2" id="text-org8a0cf0d">
+<div id="outline-container-org3c41818" class="outline-2">
+<h2 id="org3c41818">div 블럭 가운데 정렬</h2>
+<div class="outline-text-2" id="text-org3c41818">
 <p>
 큰 div 블럭 안에 가로 640 픽셀의 작은 div 블럭을 가운데로 정렬하려면 아래처럼 할 수 있습니다.
 </p>
@@ -173,9 +173,9 @@ p {
 </div>
 </div>
 </div>
-<div id="outline-container-orgd7afd10" class="outline-2">
-<h2 id="orgd7afd10">소수점 자리로 정렬</h2>
-<div class="outline-text-2" id="text-orgd7afd10">
+<div id="outline-container-org3ee99a8" class="outline-2">
+<h2 id="org3ee99a8">소수점 자리로 정렬</h2>
+<div class="outline-text-2" id="text-org3ee99a8">
 <p>
 테이블 틍에서 실수를 표시할 때 소수점 기준으로 표시하려면 아래와 같은 스타일을
 추가할 수 있습니다.
@@ -191,6 +191,6 @@ p {
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
