--- a/emacs-links.html
+++ b/emacs-links.html
@@ -42,7 +42,8 @@ gtag('config', 'UA-44534026-1');
 <li><a target="_blank" href="https://github.com/manateelazycat/emacs-application-framework">Emacs
 Application Framework</a>: PyQT 애플리케이션 임베딩 프로젝트.</li>
 <li><a target="_blank" href="https://github.com/caiorss/org-wiki">Org-wiki</a>: Org 를 이용한 개인용 혹은 데스크탑 위키 구축 확장.</li>
+<li><a target="_blank" href="http://ergoemacs.org/emacs/elisp.html">Practical Emacs Lisp</a>: Emacs Lisp 공부하기에 좋은 자료.</li>
 </ul>
-<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
