--- a/etc-dev-links.html
+++ b/etc-dev-links.html
@@ -41,16 +41,16 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org2607cf2">Rust</a></li>
-<li><a href="#org3f5a8fc">라이브러리</a></li>
-<li><a href="#org289ef4c">도구</a></li>
+<li><a href="#org6c44a8d">Rust</a></li>
+<li><a href="#orge43388d">라이브러리</a></li>
+<li><a href="#orgfed59de">도구</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org2607cf2" class="outline-2">
-<h2 id="org2607cf2">Rust</h2>
-<div class="outline-text-2" id="text-org2607cf2">
+<div id="outline-container-org6c44a8d" class="outline-2">
+<h2 id="org6c44a8d">Rust</h2>
+<div class="outline-text-2" id="text-org6c44a8d">
 <ul class="org-ul">
 <li><a target="_blank" href="https://rinthel.github.io/rust-lang-book-ko/">The Rust Programming Language (한국어판)</a>: 러스트 프로그래밍 언어</li>
 <li><a target="_blank" href="https://parksb.github.io/article/35.html">🦀 러스트의 멋짐을 모르는 당신은
@@ -59,23 +59,24 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org3f5a8fc" class="outline-2">
-<h2 id="org3f5a8fc">라이브러리</h2>
-<div class="outline-text-2" id="text-org3f5a8fc">
+<div id="outline-container-orge43388d" class="outline-2">
+<h2 id="orge43388d">라이브러리</h2>
+<div class="outline-text-2" id="text-orge43388d">
 <ul class="org-ul">
 <li><a target="_blank" href="https://libvips.github.io/libvips/">libvips</a>: 가벼운 이미지 프로세싱 라이브러리</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org289ef4c" class="outline-2">
-<h2 id="org289ef4c">도구</h2>
-<div class="outline-text-2" id="text-org289ef4c">
+<div id="outline-container-orgfed59de" class="outline-2">
+<h2 id="orgfed59de">도구</h2>
+<div class="outline-text-2" id="text-orgfed59de">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.coscreen.co">CoScreen</a>: 스크린 하나를 통채로 협업을 위한 공간으로 만들어주는 도구로 현재는 macOS만 지원되는 것 같습니다.</li>
 <li><a target="_blank" href="https://github.com/imsnif/bandwhich">Bandwhich</a>: CLI 네트워크 사용량 확인 도구로 raw 모드 지원.</li>
+<li><a target="_blank" href="https://github.com/johnsundell/publish">Publish</a>: Swift로 구현한 정적 웹 사이트 생성기.</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
