--- a/etc-resource-links.html
+++ b/etc-resource-links.html
@@ -37,9 +37,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">기타 리소스 링크 모음</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-orgc54cc8d" class="outline-2">
-<h2 id="orgc54cc8d">글꼴(Font)</h2>
-<div class="outline-text-2" id="text-orgc54cc8d">
+<div id="outline-container-org5b53af5" class="outline-2">
+<h2 id="org5b53af5">글꼴(Font)</h2>
+<div class="outline-text-2" id="text-org5b53af5">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.nerdfonts.com">Nerd Fonts</a>: 아이콘 폰트, 고정폭 글꼴 등을
 하나로 모은 폰트 등</li>
@@ -47,14 +47,14 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org84943cb" class="outline-2">
-<h2 id="org84943cb">색상(Color)</h2>
-<div class="outline-text-2" id="text-org84943cb">
+<div id="outline-container-orgfce6fe3" class="outline-2">
+<h2 id="orgfce6fe3">색상(Color)</h2>
+<div class="outline-text-2" id="text-orgfce6fe3">
 <ul class="org-ul">
 <li><a target="_blank" href="https://leonardocolor.io">Leonardo</a>: 채도 기반 색상 생성기</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
