--- a/find.html
+++ b/find.html
@@ -38,17 +38,17 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">find</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org600b3f5" class="outline-2">
-<h2 id="org600b3f5">소개</h2>
-<div class="outline-text-2" id="text-org600b3f5">
+<div id="outline-container-org3b03014" class="outline-2">
+<h2 id="org3b03014">소개</h2>
+<div class="outline-text-2" id="text-org3b03014">
 <p>
 <code>find</code> 는 특정 디렉토리에서 파일이나 디렉토리를 검색하기 위한 도구입니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org97375b8" class="outline-2">
-<h2 id="org97375b8">기본 사용법</h2>
-<div class="outline-text-2" id="text-org97375b8">
+<div id="outline-container-orgd84f230" class="outline-2">
+<h2 id="orgd84f230">기본 사용법</h2>
+<div class="outline-text-2" id="text-orgd84f230">
 <p>
 가장 간단하게는 아래처럼 사용합니다.
 </p>
@@ -111,9 +111,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgcdce3c0" class="outline-2">
-<h2 id="orgcdce3c0">-exec</h2>
-<div class="outline-text-2" id="text-orgcdce3c0">
+<div id="outline-container-org4a77cb8" class="outline-2">
+<h2 id="org4a77cb8">-exec</h2>
+<div class="outline-text-2" id="text-org4a77cb8">
 <p>
 수 많은 옵션 중 하필이면 <code>-exec</code> 옵션 만을 별도로 언급한 것은 아무래도 확장성을
 높여주는 기능이기 때문입니다. 다른 옵션들이 대부분 검색 조건을 만들어 준다면 이
@@ -142,6 +142,6 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
