--- a/flake8.html
+++ b/flake8.html
@@ -41,19 +41,19 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org60aa1f1">flake8</a></li>
-<li><a href="#org25f92ae">설치법</a></li>
-<li><a href="#org47af45d">사용법</a></li>
-<li><a href="#org332ba69">설정 파일</a></li>
-<li><a href="#org9c16aa5">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#org9d2227f">관련글</a></li>
+<li><a href="#org6a1d0fa">flake8</a></li>
+<li><a href="#org015e0ae">설치법</a></li>
+<li><a href="#orga705ef1">사용법</a></li>
+<li><a href="#org2760de8">설정 파일</a></li>
+<li><a href="#org023f238">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#org17182ee">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org60aa1f1" class="outline-2">
-<h2 id="org60aa1f1">flake8</h2>
-<div class="outline-text-2" id="text-org60aa1f1">
+<div id="outline-container-org6a1d0fa" class="outline-2">
+<h2 id="org6a1d0fa">flake8</h2>
+<div class="outline-text-2" id="text-org6a1d0fa">
 <p>
 <code>flake8</code> 은 <a href="python.html">Python</a> 코드를 점검해주는 도구이자 파이썬
 패키지입니다. 일부 오류가 있을 법한 코드나 미사용 import 등등 여러 문제점을
@@ -61,9 +61,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org25f92ae" class="outline-2">
-<h2 id="org25f92ae">설치법</h2>
-<div class="outline-text-2" id="text-org25f92ae">
+<div id="outline-container-org015e0ae" class="outline-2">
+<h2 id="org015e0ae">설치법</h2>
+<div class="outline-text-2" id="text-org015e0ae">
 <p>
 파이썬 패키지이기 때문에 pip로 그냥 설치하면 됩니다.
 </p>
@@ -73,9 +73,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org47af45d" class="outline-2">
-<h2 id="org47af45d">사용법</h2>
-<div class="outline-text-2" id="text-org47af45d">
+<div id="outline-container-orga705ef1" class="outline-2">
+<h2 id="orga705ef1">사용법</h2>
+<div class="outline-text-2" id="text-orga705ef1">
 <p>
 CLI로 그냥 실행시키면 됩니다.
 </p>
@@ -94,9 +94,9 @@ CLI로 그냥 실행시키면 됩니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org332ba69" class="outline-2">
-<h2 id="org332ba69">설정 파일</h2>
-<div class="outline-text-2" id="text-org332ba69">
+<div id="outline-container-org2760de8" class="outline-2">
+<h2 id="org2760de8">설정 파일</h2>
+<div class="outline-text-2" id="text-org2760de8">
 <p>
 전역 설정파일은 <code>~/.config/flake8</code> 파일에, 프로젝트 단위 설정은 프로젝트 루트에
 <code>.flake8</code> 혹은 <code>setup.cfg</code> 파일로 설정 내용을 작성하면 됩니다.
@@ -119,9 +119,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-org9c16aa5" class="outline-2">
-<h2 id="org9c16aa5">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-org9c16aa5">
+<div id="outline-container-org023f238" class="outline-2">
+<h2 id="org023f238">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-org023f238">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있습니다.
 </p>
@@ -157,14 +157,14 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-org9d2227f" class="outline-2">
-<h2 id="org9d2227f">관련글</h2>
-<div class="outline-text-2" id="text-org9d2227f">
+<div id="outline-container-org17182ee" class="outline-2">
+<h2 id="org17182ee">관련글</h2>
+<div class="outline-text-2" id="text-org17182ee">
 <ul class="org-ul">
 <li><a href="python.html">Python</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
