--- a/flutter.html
+++ b/flutter.html
@@ -38,22 +38,22 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Flutter</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org02d78bb" class="outline-2">
-<h2 id="org02d78bb">이 문서는</h2>
-<div class="outline-text-2" id="text-org02d78bb">
+<div id="outline-container-org1b379eb" class="outline-2">
+<h2 id="org1b379eb">이 문서는</h2>
+<div class="outline-text-2" id="text-org1b379eb">
 <p>
 그냥 메모 용도로 개설된 페이지입니다. Flutter와 관련된 자세한 사항은 구글신꼐
 물어보시는 것이 가장 빠릅니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7d40333" class="outline-2">
-<h2 id="org7d40333">Troubleshooting</h2>
-<div class="outline-text-2" id="text-org7d40333">
+<div id="outline-container-org650c732" class="outline-2">
+<h2 id="org650c732">Troubleshooting</h2>
+<div class="outline-text-2" id="text-org650c732">
 </div>
-<div id="outline-container-org1b2ccf5" class="outline-3">
-<h3 id="org1b2ccf5">macOS</h3>
-<div class="outline-text-3" id="text-org1b2ccf5">
+<div id="outline-container-org5aa0a53" class="outline-3">
+<h3 id="org5aa0a53">macOS</h3>
+<div class="outline-text-3" id="text-org5aa0a53">
 <p>
 <code>flutter doctor</code> 나 <code>flutter devices</code> 등의 명령을 실행시키면 아래와 같은 오류
 다이얼로그가 항상 떴습니다.
@@ -88,6 +88,6 @@ idevice<sub>id를</sub> 허용할지 말지를 묻는 내용이 추가되어 있
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
