--- a/install-emacs.html
+++ b/install-emacs.html
@@ -41,31 +41,31 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org606ba75">Emacs 설치</a></li>
-<li><a href="#orgb9efe8c">macOS + Homebrew</a></li>
-<li><a href="#orgc730527">macOS 추가 설정</a>
+<li><a href="#orgd8a9169">Emacs 설치</a></li>
+<li><a href="#orgd44a5d7">macOS + Homebrew</a></li>
+<li><a href="#org421194a">macOS 추가 설정</a>
 <ul>
-<li><a href="#orgfe993aa">Full Disk Access</a></li>
-<li><a href="#org27282fd">Full Disk Access on Catalina</a></li>
+<li><a href="#org2273a1e">Full Disk Access</a></li>
+<li><a href="#orgef3edb8">Full Disk Access on Catalina</a></li>
 </ul>
 </li>
-<li><a href="#org7b6b907">관련글</a></li>
+<li><a href="#orgb15e8fd">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org606ba75" class="outline-2">
-<h2 id="org606ba75">Emacs 설치</h2>
-<div class="outline-text-2" id="text-org606ba75">
+<div id="outline-container-orgd8a9169" class="outline-2">
+<h2 id="orgd8a9169">Emacs 설치</h2>
+<div class="outline-text-2" id="text-orgd8a9169">
 <p>
 <a href="emacs.html">Emacs</a> 를 설치하는 방법은 여러가지가 있습니다만 여기서는 macOS 에서 Homebrew 를
 통해 설치하는 것을 가정하여 다음의 방법으로 설치할 수 있습니다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgb9efe8c" class="outline-2">
-<h2 id="orgb9efe8c">macOS + Homebrew</h2>
-<div class="outline-text-2" id="text-orgb9efe8c">
+<div id="outline-container-orgd44a5d7" class="outline-2">
+<h2 id="orgd44a5d7">macOS + Homebrew</h2>
+<div class="outline-text-2" id="text-orgd44a5d7">
 <p>
 기본적으로 GNU Emacs 는 아래의 커맨드로 설치가 쉽게 되는 편입니다.
 </p>
@@ -113,13 +113,13 @@ Emacs Plus의 앱 아이콘은 기본적으로 <a href="spacemacs.html">Spacemac
 </p>
 </div>
 </div>
-<div id="outline-container-orgc730527" class="outline-2">
-<h2 id="orgc730527">macOS 추가 설정</h2>
-<div class="outline-text-2" id="text-orgc730527">
+<div id="outline-container-org421194a" class="outline-2">
+<h2 id="org421194a">macOS 추가 설정</h2>
+<div class="outline-text-2" id="text-org421194a">
 </div>
-<div id="outline-container-orgfe993aa" class="outline-3">
-<h3 id="orgfe993aa">Full Disk Access</h3>
-<div class="outline-text-3" id="text-orgfe993aa">
+<div id="outline-container-org2273a1e" class="outline-3">
+<h3 id="org2273a1e">Full Disk Access</h3>
+<div class="outline-text-3" id="text-org2273a1e">
 <p>
 <a href="emacs.html">Emacs</a>가 특정 디렉토리에 접근하지 못 한다면 Full Disk Access
 권한을 줘야 합니다. Preferences - Security &amp; Privacy - Privacy 항목을 들어간 후 좌측에서
@@ -127,9 +127,9 @@ Full Disk Access를 찾아서 여기에 <a href="emacs.html">Emacs</a>를 등록
 </p>
 </div>
 </div>
-<div id="outline-container-org27282fd" class="outline-3">
-<h3 id="org27282fd">Full Disk Access on Catalina</h3>
-<div class="outline-text-3" id="text-org27282fd">
+<div id="outline-container-orgef3edb8" class="outline-3">
+<h3 id="orgef3edb8">Full Disk Access on Catalina</h3>
+<div class="outline-text-3" id="text-orgef3edb8">
 <p>
 <a href="emacs.html">Emacs</a>는 ruby 런처를 통해 실행되기 때문에 ruby의 퍼미션 또한
 영향을 끼칩니다. 위와 동일하게 Preferences - Security &amp; Privacy - Privacy
@@ -141,9 +141,9 @@ Full Disk Access를 찾아서 여기에 <a href="emacs.html">Emacs</a>를 등록
 </div>
 </div>
 </div>
-<div id="outline-container-org7b6b907" class="outline-2">
-<h2 id="org7b6b907">관련글</h2>
-<div class="outline-text-2" id="text-org7b6b907">
+<div id="outline-container-orgb15e8fd" class="outline-2">
+<h2 id="orgb15e8fd">관련글</h2>
+<div class="outline-text-2" id="text-orgb15e8fd">
 <ul class="org-ul">
 <li><a href="./emacs.html">Emacs</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
@@ -151,6 +151,6 @@ Full Disk Access를 찾아서 여기에 <a href="emacs.html">Emacs</a>를 등록
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
