--- a/italian.html
+++ b/italian.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">이탈리아어 노트</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org0641abe" class="outline-2">
-<h2 id="org0641abe">이 노트는 망했어요</h2>
-<div class="outline-text-2" id="text-org0641abe">
+<div id="outline-container-org12ea1b4" class="outline-2">
+<h2 id="org12ea1b4">이 노트는 망했어요</h2>
+<div class="outline-text-2" id="text-org12ea1b4">
 <blockquote>
 <p>
 이태리(Italy) 아니죠? 이탈리아(Italia)입니다.
@@ -58,9 +58,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org13ca61d" class="outline-2">
-<h2 id="org13ca61d">숫자</h2>
-<div class="outline-text-2" id="text-org13ca61d">
+<div id="outline-container-org5ba2e05" class="outline-2">
+<h2 id="org5ba2e05">숫자</h2>
+<div class="outline-text-2" id="text-org5ba2e05">
 <ul class="org-ul">
 <li>1 uno</li>
 <li>2 due</li>
@@ -75,9 +75,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org5430a0d" class="outline-2">
-<h2 id="org5430a0d">순서</h2>
-<div class="outline-text-2" id="text-org5430a0d">
+<div id="outline-container-org3f6ecfb" class="outline-2">
+<h2 id="org3f6ecfb">순서</h2>
+<div class="outline-text-2" id="text-org3f6ecfb">
 <ul class="org-ul">
 <li>첫번째 primo</li>
 <li>두번째 secondo</li>
@@ -92,9 +92,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org102ca5b" class="outline-2">
-<h2 id="org102ca5b">월</h2>
-<div class="outline-text-2" id="text-org102ca5b">
+<div id="outline-container-orgb0bdcec" class="outline-2">
+<h2 id="orgb0bdcec">월</h2>
+<div class="outline-text-2" id="text-orgb0bdcec">
 <ul class="org-ul">
 <li>1월 gennaio</li>
 <li>2월 febbraio</li>
@@ -111,9 +111,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc9cbf2a" class="outline-2">
-<h2 id="orgc9cbf2a">요일</h2>
-<div class="outline-text-2" id="text-orgc9cbf2a">
+<div id="outline-container-org3afa678" class="outline-2">
+<h2 id="org3afa678">요일</h2>
+<div class="outline-text-2" id="text-org3afa678">
 <ul class="org-ul">
 <li>월요일 lunedi</li>
 <li>화요일 martedi</li>
@@ -125,6 +125,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
