--- a/javascript.html
+++ b/javascript.html
@@ -41,20 +41,20 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgac05d6c">Javascript</a></li>
-<li><a href="#org9bb2365">노트</a>
+<li><a href="#orgf43a3b7">Javascript</a></li>
+<li><a href="#orgacbc24a">노트</a>
 <ul>
-<li><a href="#orgf92cbf1">모듈(Module)</a></li>
-<li><a href="#org62ae9c3">스프레드(Spreads)</a></li>
+<li><a href="#orgd96e4b5">모듈(Module)</a></li>
+<li><a href="#orgb358ded">스프레드(Spreads)</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-orgac05d6c" class="outline-2">
-<h2 id="orgac05d6c">Javascript</h2>
-<div class="outline-text-2" id="text-orgac05d6c">
+<div id="outline-container-orgf43a3b7" class="outline-2">
+<h2 id="orgf43a3b7">Javascript</h2>
+<div class="outline-text-2" id="text-orgf43a3b7">
 <p>
 자바스크립트는 웹 브라우저에서 동작하는 스크립트 언어입니다. 뭔가 부족한 듯한 소개지만 사실상
 모든 것을 대변하는 말이기도 하지요. 물론 현재는 웹 브라우저 뿐만 아니라 엔진만
@@ -68,17 +68,17 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org9bb2365" class="outline-2">
-<h2 id="org9bb2365">노트</h2>
-<div class="outline-text-2" id="text-org9bb2365">
+<div id="outline-container-orgacbc24a" class="outline-2">
+<h2 id="orgacbc24a">노트</h2>
+<div class="outline-text-2" id="text-orgacbc24a">
 <p>
 여기에 붙는 글들은 정해진 주제 없이 필요할 때 마다 붙는 메모 형식으로
 작성됩니다. 후에 글이 모이면 별도의 글로 분리될 수도 있습니다.
 </p>
 </div>
-<div id="outline-container-orgf92cbf1" class="outline-3">
-<h3 id="orgf92cbf1">모듈(Module)</h3>
-<div class="outline-text-3" id="text-orgf92cbf1">
+<div id="outline-container-orgd96e4b5" class="outline-3">
+<h3 id="orgd96e4b5">모듈(Module)</h3>
+<div class="outline-text-3" id="text-orgd96e4b5">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰입니다.
 </p>
@@ -137,9 +137,9 @@ export를 리스트 형태로 하거나 export 하면서 이름을 바꾸거나 
 </p>
 </div>
 </div>
-<div id="outline-container-org62ae9c3" class="outline-3">
-<h3 id="org62ae9c3">스프레드(Spreads)</h3>
-<div class="outline-text-3" id="text-org62ae9c3">
+<div id="outline-container-orgb358ded" class="outline-3">
+<h3 id="orgb358ded">스프레드(Spreads)</h3>
+<div class="outline-text-3" id="text-orgb358ded">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며 이름처럼 펼치거나 확산한다라는 의미로 동작합니다.
 </p>
@@ -208,6 +208,6 @@ sixArgs(...arr);
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
