--- a/korean.html
+++ b/korean.html
@@ -41,26 +41,26 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org72c97f8">이 페이지는</a></li>
-<li><a href="#org7d917a5">되/돼</a></li>
-<li><a href="#org4957a18">게</a></li>
-<li><a href="#org2569c21">수밖에</a></li>
+<li><a href="#orga1fc1fa">이 페이지는</a></li>
+<li><a href="#orge275176">되/돼</a></li>
+<li><a href="#org7f9e267">게</a></li>
+<li><a href="#org84937a0">수밖에</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org72c97f8" class="outline-2">
-<h2 id="org72c97f8">이 페이지는</h2>
-<div class="outline-text-2" id="text-org72c97f8">
+<div id="outline-container-orga1fc1fa" class="outline-2">
+<h2 id="orga1fc1fa">이 페이지는</h2>
+<div class="outline-text-2" id="text-orga1fc1fa">
 <p>
 개인적으로 자주 틀리는 한국어 문법을 기록하기 위한 페이지입니다. 모든 문법을
 다루지 않습니다. 정말 개인적인 용도예요.
 </p>
 </div>
 </div>
-<div id="outline-container-org7d917a5" class="outline-2">
-<h2 id="org7d917a5">되/돼</h2>
-<div class="outline-text-2" id="text-org7d917a5">
+<div id="outline-container-orge275176" class="outline-2">
+<h2 id="orge275176">되/돼</h2>
+<div class="outline-text-2" id="text-orge275176">
 <p>
 <code>되/돼</code> 를 <code>하/해</code> 로 치환시켜 보면 구분이 쉽게 되는 편입니다.
 </p>
@@ -71,23 +71,23 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org4957a18" class="outline-2">
-<h2 id="org4957a18">게</h2>
-<div class="outline-text-2" id="text-org4957a18">
+<div id="outline-container-org7f9e267" class="outline-2">
+<h2 id="org7f9e267">게</h2>
+<div class="outline-text-2" id="text-org7f9e267">
 <p>
 '뭐뭐 하는게' 👉 '뭐뭐 하는 게'
 </p>
 </div>
 </div>
-<div id="outline-container-org2569c21" class="outline-2">
-<h2 id="org2569c21">수밖에</h2>
-<div class="outline-text-2" id="text-org2569c21">
+<div id="outline-container-org84937a0" class="outline-2">
+<h2 id="org84937a0">수밖에</h2>
+<div class="outline-text-2" id="text-org84937a0">
 <p>
 '뭐뭐 할 수 밖에' 가 아니라 '뭐뭐할 수밖에' 입니다. 개인적으로 아직도 자주
 틀리고 있는 문법입니다.
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
