--- a/lisp.html
+++ b/lisp.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Lisp</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org3639eff" class="outline-2">
-<h2 id="org3639eff">Lisp</h2>
-<div class="outline-text-2" id="text-org3639eff">
+<div id="outline-container-org8a51224" class="outline-2">
+<h2 id="org8a51224">Lisp</h2>
+<div class="outline-text-2" id="text-org8a51224">
 <p>
 Lisp 이라는 이름에 어울리게 리스트(list) 처리에 최적화된 프로그래밍 언어입니다.
 주로 인공 지능에 많이 쓰인다는데 본 적이 없어서 모르겠네요. 어쨌거나 특수한
@@ -51,17 +51,17 @@ Lisp 이라는 이름에 어울리게 리스트(list) 처리에 최적화된 프
 리습은 몇 가지 종류로 구분됩니다.
 </p>
 </div>
-<div id="outline-container-orgc924d74" class="outline-3">
-<h3 id="orgc924d74">Common Lisp</h3>
-<div class="outline-text-3" id="text-orgc924d74">
+<div id="outline-container-org5fb73c7" class="outline-3">
+<h3 id="org5fb73c7">Common Lisp</h3>
+<div class="outline-text-3" id="text-org5fb73c7">
 <p>
 보통 리습(Lisp) 이라는 언어는 일반적으로 Common Lisp 이며 다른 별종(?)들과는 구분 짓는 것이 일반적입니다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga1ded03" class="outline-3">
-<h3 id="orga1ded03">Emacs Lisp</h3>
-<div class="outline-text-3" id="text-orga1ded03">
+<div id="outline-container-org5f17aa2" class="outline-3">
+<h3 id="org5f17aa2">Emacs Lisp</h3>
+<div class="outline-text-3" id="text-org5f17aa2">
 <p>
 Emacs Lisp 은 <a href="emacs.html">Emacs</a>에서 사용되는 리습으로 Common Lisp 과 문법은 동일하지만
 기본적으로 제공되는 함수들이 이맥스 에디터 구현을 위해 제공되는 것들이 많습니다. 덕분에
@@ -78,9 +78,9 @@ Emacs Lisp 은 <a href="emacs.html">Emacs</a>에서 사용되는 리습으로 Co
 </ul>
 </div>
 </div>
-<div id="outline-container-org1a09e64" class="outline-3">
-<h3 id="org1a09e64">Clojure</h3>
-<div class="outline-text-3" id="text-org1a09e64">
+<div id="outline-container-orga38973b" class="outline-3">
+<h3 id="orga38973b">Clojure</h3>
+<div class="outline-text-3" id="text-orga38973b">
 <p>
 리습에서 파생된 언어 중 그나마 활발하게 사용되는 언어가 바로 이 클로져같습니다. 중간언어
 역할을 하기 때문에 자체적으로 인터프리팅 되기 보다는 JVM 이나 .Net 바이트코드
@@ -89,14 +89,14 @@ Emacs Lisp 은 <a href="emacs.html">Emacs</a>에서 사용되는 리습으로 Co
 </div>
 </div>
 </div>
-<div id="outline-container-orgcf7ac8f" class="outline-2">
-<h2 id="orgcf7ac8f">관련글</h2>
-<div class="outline-text-2" id="text-orgcf7ac8f">
+<div id="outline-container-org6e71bdc" class="outline-2">
+<h2 id="org6e71bdc">관련글</h2>
+<div class="outline-text-2" id="text-org6e71bdc">
 <ul class="org-ul">
 <li><a href="./emacs.html">Emacs</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
