--- a/macos.html
+++ b/macos.html
@@ -41,22 +41,22 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org2bbeb67">소개</a></li>
-<li><a href="#org20e7995">팁 메모</a>
+<li><a href="#orgebe1ea4">소개</a></li>
+<li><a href="#org08040d2">팁 메모</a>
 <ul>
-<li><a href="#orgf7b37bc">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgc2044d0">쉘에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgdd4f67c">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org882198a">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgc508728">쉘에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org477ea14">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </li>
-<li><a href="#org5257f8b">관련글</a></li>
+<li><a href="#org898e005">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org2bbeb67" class="outline-2">
-<h2 id="org2bbeb67">소개</h2>
-<div class="outline-text-2" id="text-org2bbeb67">
+<div id="outline-container-orgebe1ea4" class="outline-2">
+<h2 id="orgebe1ea4">소개</h2>
+<div class="outline-text-2" id="text-orgebe1ea4">
 <p>
 뭐 다들 아시는 그 애플의 독자 OS입니다. 내부는 유닉스(BSD)를 기원으로 하는 OS이며
 껍데기(?)는 전신인 NextStep 에 많은 영향을 받은 것이 현재의 macOS 입니다.
@@ -73,21 +73,21 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org20e7995" class="outline-2">
-<h2 id="org20e7995">팁 메모</h2>
-<div class="outline-text-2" id="text-org20e7995">
+<div id="outline-container-org08040d2" class="outline-2">
+<h2 id="org08040d2">팁 메모</h2>
+<div class="outline-text-2" id="text-org08040d2">
 </div>
-<div id="outline-container-orgf7b37bc" class="outline-3">
-<h3 id="orgf7b37bc">이모티콘(Emoji) 쉽게 입력하기</h3>
-<div class="outline-text-3" id="text-orgf7b37bc">
+<div id="outline-container-org882198a" class="outline-3">
+<h3 id="org882198a">이모티콘(Emoji) 쉽게 입력하기</h3>
+<div class="outline-text-3" id="text-org882198a">
 <p>
 단축키 <code>Control+Command+Space</code> 를 누르면 입력 창이 뜹니다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc2044d0" class="outline-3">
-<h3 id="orgc2044d0">쉘에서 iCloud Drive 접근하기</h3>
-<div class="outline-text-3" id="text-orgc2044d0">
+<div id="outline-container-orgc508728" class="outline-3">
+<h3 id="orgc508728">쉘에서 iCloud Drive 접근하기</h3>
+<div class="outline-text-3" id="text-orgc508728">
 <p>
 아래 디렉토리가 iCloud Drive의 위치입니다.
 </p>
@@ -107,9 +107,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgdd4f67c" class="outline-3">
-<h3 id="orgdd4f67c">다음으로 열기(Open with) 메뉴 초기화하기</h3>
-<div class="outline-text-3" id="text-orgdd4f67c">
+<div id="outline-container-org477ea14" class="outline-3">
+<h3 id="org477ea14">다음으로 열기(Open with) 메뉴 초기화하기</h3>
+<div class="outline-text-3" id="text-org477ea14">
 <p>
 파인더에서 특정 파일을 우클릭해서 나타나는 팝업 메뉴에서 '다음으로 열기'
 혹은 'Open with' 항목이
@@ -131,14 +131,14 @@ killall Finder
 </div>
 </div>
 </div>
-<div id="outline-container-org5257f8b" class="outline-2">
-<h2 id="org5257f8b">관련글</h2>
-<div class="outline-text-2" id="text-org5257f8b">
+<div id="outline-container-org898e005" class="outline-2">
+<h2 id="org898e005">관련글</h2>
+<div class="outline-text-2" id="text-org898e005">
 <ul class="org-ul">
 <li><a href="homebrew.html">Homebrew</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
