--- a/minecraft.html
+++ b/minecraft.html
@@ -37,13 +37,13 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">마인크래프트</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org395c478" class="outline-2">
-<h2 id="org395c478">레드스톤</h2>
-<div class="outline-text-2" id="text-org395c478">
+<div id="outline-container-org261ca73" class="outline-2">
+<h2 id="org261ca73">레드스톤</h2>
+<div class="outline-text-2" id="text-org261ca73">
 </div>
-<div id="outline-container-orgecf6171" class="outline-3">
-<h3 id="orgecf6171">관측기(Observer)</h3>
-<div class="outline-text-3" id="text-orgecf6171">
+<div id="outline-container-org3ca9f21" class="outline-3">
+<h3 id="org3ca9f21">관측기(Observer)</h3>
+<div class="outline-text-3" id="text-org3ca9f21">
 <ul class="org-ul">
 <li>얼굴이 있는 방향의 인접 블록의 정보를 캐치할 수 있는 회로</li>
 <li>블록이 깨지거나 설치되는 상태, 혹은 작물의 성장 변화, 리핕터 시그널 감지</li>
@@ -52,9 +52,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org6ffeb2b" class="outline-3">
-<h3 id="org6ffeb2b">비교기(Comparator)</h3>
-<div class="outline-text-3" id="text-org6ffeb2b">
+<div id="outline-container-orgc3bb5e4" class="outline-3">
+<h3 id="orgc3bb5e4">비교기(Comparator)</h3>
+<div class="outline-text-3" id="text-orgc3bb5e4">
 <ul class="org-ul">
 <li>기본 모드 시 스토리지 안의 아이템 갯수 만큼 시그널 발생</li>
 <li>토글(ON) 시 비교기 방향의 시그널은 그대로 통과시키며, 만약 비교기 옆 쪽으로 시그널이 들어올 경우 비교기에서 시그널 송출이 중지됨</li>
@@ -62,13 +62,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org84e7cb1" class="outline-2">
-<h2 id="org84e7cb1">몹 팜</h2>
-<div class="outline-text-2" id="text-org84e7cb1">
+<div id="outline-container-orgf7c8ada" class="outline-2">
+<h2 id="orgf7c8ada">몹 팜</h2>
+<div class="outline-text-2" id="text-orgf7c8ada">
 </div>
-<div id="outline-container-org179bd56" class="outline-3">
-<h3 id="org179bd56">몹 스폰 범위</h3>
-<div class="outline-text-3" id="text-org179bd56">
+<div id="outline-container-org790482c" class="outline-3">
+<h3 id="org790482c">몹 스폰 범위</h3>
+<div class="outline-text-3" id="text-org790482c">
 <ul class="org-ul">
 <li>플레이어를 중심으로 24블록 떨어진 곳에서 부터 스폰</li>
 <li>플레이어를 중심으로 32블록 떨어진 곳 바깥쪽의 몹은 동작하지 않으며 스폰 및 디스폰을 반복</li>
@@ -81,15 +81,15 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org34ce266" class="outline-3">
-<h3 id="org34ce266">몹 스포너 작동 조건</h3>
-<div class="outline-text-3" id="text-org34ce266">
+<div id="outline-container-orga394d69" class="outline-3">
+<h3 id="orga394d69">몹 스포너 작동 조건</h3>
+<div class="outline-text-3" id="text-orga394d69">
 <ul class="org-ul">
 <li>플레이어를 중심으로 16블록 내에 있는 몹 스포너만 작동</li>
 </ul>
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 26일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
