--- a/non-dev-links.html
+++ b/non-dev-links.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">비개발 관련 정보 링크 모음</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-orgfde559d" class="outline-2">
-<h2 id="orgfde559d">건강 관련</h2>
-<div class="outline-text-2" id="text-orgfde559d">
+<div id="outline-container-orgb1b7d54" class="outline-2">
+<h2 id="orgb1b7d54">건강 관련</h2>
+<div class="outline-text-2" id="text-orgb1b7d54">
 <ul class="org-ul">
 <li><a target="_blank" href="http://www.korea.kr/news/reporterView.do?newsId=148859476">건강보험공단
 ‘건강보험 직장가입자 임의계속 가입제도’</a>: 퇴사 하게 되면 건강보험 지역가입자로
@@ -48,15 +48,15 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org7a44b3f" class="outline-2">
-<h2 id="org7a44b3f">기타</h2>
-<div class="outline-text-2" id="text-org7a44b3f">
+<div id="outline-container-orgc689e6f" class="outline-2">
+<h2 id="orgc689e6f">기타</h2>
+<div class="outline-text-2" id="text-orgc689e6f">
 <ul class="org-ul">
 <li><a target="_blank" href="https://neal.fun/deep-sea/">The Deep Sea</a>: 정말로 깊은 바다와 거기서 사는
 생물들을 알아갈 수 있는 사이트</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
