--- a/org-publish-tips.html
+++ b/org-publish-tips.html
@@ -42,9 +42,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </blockquote>
 
-<div id="outline-container-orgf510659" class="outline-2">
-<h2 id="orgf510659">전부 업데이트하기</h2>
-<div class="outline-text-2" id="text-orgf510659">
+<div id="outline-container-org8b6fa5a" class="outline-2">
+<h2 id="org8b6fa5a">전부 업데이트하기</h2>
+<div class="outline-text-2" id="text-org8b6fa5a">
 <p>
 org-publish 는 기본적으로 변경된 파일만 업데이트를 하는데 만약 설정을 바꾸는
 바람에 모든 글을 다시 익스포트해야 한다면 일일이 파일을 touch 해야 하는 등
@@ -63,9 +63,9 @@ Doom Emacs 를 사용 중이라면 <code>SPC ;</code> 단축키로 위 명령을
 </div>
 </div>
 
-<div id="outline-container-org6185b1b" class="outline-2">
-<h2 id="org6185b1b">관련글</h2>
-<div class="outline-text-2" id="text-org6185b1b">
+<div id="outline-container-orgb0b4fe8" class="outline-2">
+<h2 id="orgb0b4fe8">관련글</h2>
+<div class="outline-text-2" id="text-orgb0b4fe8">
 <ul class="org-ul">
 <li><a href="./org-mode.html">Org Mode</a></li>
 <li><a href="./org-publish.html">Org Publish</a></li>
@@ -74,6 +74,6 @@ Doom Emacs 를 사용 중이라면 <code>SPC ;</code> 단축키로 위 명령을
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
