--- a/org-publish.html
+++ b/org-publish.html
@@ -41,21 +41,21 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc42f465">소개</a></li>
-<li><a href="#org67c7e04">시작하기</a></li>
-<li><a href="#orgedc7a7c">필요한 모듈들</a></li>
-<li><a href="#org8bd53b5">기본 설정</a></li>
-<li><a href="#orgff73e18">Publish 해보기</a></li>
-<li><a href="#org49d9724">프로젝트 그룹화하기</a></li>
-<li><a href="#org1a872d7">전부 새로 퍼블리시 하기</a></li>
-<li><a href="#org3836745">관련글</a></li>
+<li><a href="#orged38035">소개</a></li>
+<li><a href="#orgcaca605">시작하기</a></li>
+<li><a href="#org6a805fd">필요한 모듈들</a></li>
+<li><a href="#org9161126">기본 설정</a></li>
+<li><a href="#orgacfe0bc">Publish 해보기</a></li>
+<li><a href="#orgbddcb6e">프로젝트 그룹화하기</a></li>
+<li><a href="#org12efcfa">전부 새로 퍼블리시 하기</a></li>
+<li><a href="#org1700206">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-orgc42f465" class="outline-2">
-<h2 id="orgc42f465">소개</h2>
-<div class="outline-text-2" id="text-orgc42f465">
+<div id="outline-container-orged38035" class="outline-2">
+<h2 id="orged38035">소개</h2>
+<div class="outline-text-2" id="text-orged38035">
 <p>
 org-publish는 <a href="emacs.html">Emacs</a>에서 <a href="org-mode.html">Org Mode</a>로 작성된 .org 문서들로 정적 웹사이트를 만들 수 있게
 해주는 도구입니다. 쉽게 말해서 특정 디렉토리 안의 .org 파일들을 .html 파일로
@@ -68,9 +68,9 @@ org-publish 를 어떻게 설정하고 사용하는지 살펴봅시다.
 </p>
 </div>
 </div>
-<div id="outline-container-org67c7e04" class="outline-2">
-<h2 id="org67c7e04">시작하기</h2>
-<div class="outline-text-2" id="text-org67c7e04">
+<div id="outline-container-orgcaca605" class="outline-2">
+<h2 id="orgcaca605">시작하기</h2>
+<div class="outline-text-2" id="text-orgcaca605">
 <p>
 일단 아래와 같은 디렉토리에서 글을 쓴다고 가정합시다.
 </p>
@@ -115,9 +115,9 @@ org-publish 를 어떻게 설정하고 사용하는지 살펴봅시다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgedc7a7c" class="outline-2">
-<h2 id="orgedc7a7c">필요한 모듈들</h2>
-<div class="outline-text-2" id="text-orgedc7a7c">
+<div id="outline-container-org6a805fd" class="outline-2">
+<h2 id="org6a805fd">필요한 모듈들</h2>
+<div class="outline-text-2" id="text-org6a805fd">
 <p>
 org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다. Emacs 에 빌트인
 되어있기 때문입니다. 단지 몇 가지 모듈은 자동으로 로딩되지 않기 때문에 수동으로
@@ -139,9 +139,9 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 </p>
 </div>
 </div>
-<div id="outline-container-org8bd53b5" class="outline-2">
-<h2 id="org8bd53b5">기본 설정</h2>
-<div class="outline-text-2" id="text-org8bd53b5">
+<div id="outline-container-org9161126" class="outline-2">
+<h2 id="org9161126">기본 설정</h2>
+<div class="outline-text-2" id="text-org9161126">
 <p>
 <code>org-publish-project-alist</code> 라는 리스트가 org-publish 의 핵심입니다.
 아래는 위의 목적대로 동작하도록 설정하는 스크립트입니다.
@@ -199,9 +199,9 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 </p>
 </div>
 </div>
-<div id="outline-container-orgff73e18" class="outline-2">
-<h2 id="orgff73e18">Publish 해보기</h2>
-<div class="outline-text-2" id="text-orgff73e18">
+<div id="outline-container-orgacfe0bc" class="outline-2">
+<h2 id="orgacfe0bc">Publish 해보기</h2>
+<div class="outline-text-2" id="text-orgacfe0bc">
 <p>
 편찬(publish)을 하기 위해서는 <code>org-publish-all</code> 함수를 호출하면 됩니다.
 이 함수는 등록된 모든 프로젝트의 설정에 맞게 익스포트하거나 필요한 파일을
@@ -224,9 +224,9 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 </p>
 </div>
 </div>
-<div id="outline-container-org49d9724" class="outline-2">
-<h2 id="org49d9724">프로젝트 그룹화하기</h2>
-<div class="outline-text-2" id="text-org49d9724">
+<div id="outline-container-orgbddcb6e" class="outline-2">
+<h2 id="orgbddcb6e">프로젝트 그룹화하기</h2>
+<div class="outline-text-2" id="text-orgbddcb6e">
 <p>
 <code>org-publish-all</code> 의 경우 등록된 모든 프로젝트를 대상으로 익스포트 및 복사
 작업을 수행합니다. 하지만 만약 필요에 의해 모든 것이 한번에가 아니라 필요한 것만
@@ -288,9 +288,9 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 </blockquote>
 </div>
 </div>
-<div id="outline-container-org1a872d7" class="outline-2">
-<h2 id="org1a872d7">전부 새로 퍼블리시 하기</h2>
-<div class="outline-text-2" id="text-org1a872d7">
+<div id="outline-container-org12efcfa" class="outline-2">
+<h2 id="org12efcfa">전부 새로 퍼블리시 하기</h2>
+<div class="outline-text-2" id="text-org12efcfa">
 <p>
 org-publish 는 기본적으로 변경된 파일만 업데이트를 하는데 만약 설정을 바꾸는
 바람에 모든 글을 다시 익스포트해야 한다면 일일이 파일을 touch 해야 하는 등
@@ -306,9 +306,9 @@ Doom Emacs 를 사용 중이라면 <code>SPC ;</code> 단축키로 위 명령을
 </p>
 </div>
 </div>
-<div id="outline-container-org3836745" class="outline-2">
-<h2 id="org3836745">관련글</h2>
-<div class="outline-text-2" id="text-org3836745">
+<div id="outline-container-org1700206" class="outline-2">
+<h2 id="org1700206">관련글</h2>
+<div class="outline-text-2" id="text-org1700206">
 <ul class="org-ul">
 <li><a href="./org-mode.html">Org Mode</a></li>
 <li><a href="./emacs.html">Emacs</a></li>
@@ -317,6 +317,6 @@ Doom Emacs 를 사용 중이라면 <code>SPC ;</code> 단축키로 위 명령을
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
