--- a/org-tip.html
+++ b/org-tip.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Org Mode 팁 모음</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org8912155" class="outline-2">
-<h2 id="org8912155">링크 렌더링 하지 않기</h2>
-<div class="outline-text-2" id="text-org8912155">
+<div id="outline-container-org44ad6b8" class="outline-2">
+<h2 id="org44ad6b8">링크 렌더링 하지 않기</h2>
+<div class="outline-text-2" id="text-org44ad6b8">
 <p>
 <a href="doom-emacs.html">Doom Emacs</a>나 <a href="spacemacs.html">Spacemacs</a>의 기본 설정 상태에서는 링크가 자동으로 렌더링 되어서 보기
 편하게 바뀝니다. 예를 들어 <code>[[https://foo.bar][link name]]</code> 같은 코드는 그냥
@@ -57,9 +57,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org75a1e41" class="outline-2">
-<h2 id="org75a1e41">관련글</h2>
-<div class="outline-text-2" id="text-org75a1e41">
+<div id="outline-container-orgb2b74bd" class="outline-2">
+<h2 id="orgb2b74bd">관련글</h2>
+<div class="outline-text-2" id="text-orgb2b74bd">
 <ul class="org-ul">
 <li><a href="./org-mode.html">Org Mode</a></li>
 <li><a href="./org-tip.html">Org Mode 팁 모음</a></li>
@@ -69,6 +69,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
