--- a/profile.html
+++ b/profile.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Profile</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-orgec1370e" class="outline-2">
-<h2 id="orgec1370e">Seorenn</h2>
-<div class="outline-text-2" id="text-orgec1370e">
+<div id="outline-container-org33ffb05" class="outline-2">
+<h2 id="org33ffb05">Seorenn</h2>
+<div class="outline-text-2" id="text-org33ffb05">
 <p>
 네 Seorenn 입니다. 한국어로 '세오렌' 이라고 대충 읽으면 됩니다. 잡다한 일을 하는
 개발자이고 고전양식 혹은 르네상스양식 건축물을 좋아합니다.
@@ -67,9 +67,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org3e6bf1c" class="outline-2">
-<h2 id="org3e6bf1c">Links</h2>
-<div class="outline-text-2" id="text-org3e6bf1c">
+<div id="outline-container-org6c8590e" class="outline-2">
+<h2 id="org6c8590e">Links</h2>
+<div class="outline-text-2" id="text-org6c8590e">
 <p>
 현재 활동 중인 SNS 및 블로그 링크입니다.
 </p>
@@ -88,9 +88,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org352b2f4" class="outline-2">
-<h2 id="org352b2f4">Deactivated Links</h2>
-<div class="outline-text-2" id="text-org352b2f4">
+<div id="outline-container-orgb5e5f78" class="outline-2">
+<h2 id="orgb5e5f78">Deactivated Links</h2>
+<div class="outline-text-2" id="text-orgb5e5f78">
 <p>
 여기에는 현재는 업데이트 하지 않는 옛날 블로그들 주소를 정리합니다. 업데이트는
 되지 않고 있지만 많은 글이 쌓여있는 데이터베이스와 같은 것들이라 버리긴 너무나
@@ -104,6 +104,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
