--- a/python-links.html
+++ b/python-links.html
@@ -38,22 +38,22 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">파이썬(Python) 관련 링크 모음</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org59846c5" class="outline-2">
-<h2 id="org59846c5">의존성 관리</h2>
-<div class="outline-text-2" id="text-org59846c5">
+<div id="outline-container-org02e178d" class="outline-2">
+<h2 id="org02e178d">의존성 관리</h2>
+<div class="outline-text-2" id="text-org02e178d">
 <ul class="org-ul">
 <li><a target="_blank" href="https://python-poetry.org">Poetry</a>: 파이썬의 차세대(?) 의존성 및 패키지 관리자</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgde00849" class="outline-2">
-<h2 id="orgde00849">좋은 글들</h2>
-<div class="outline-text-2" id="text-orgde00849">
+<div id="outline-container-orgcd2dc9f" class="outline-2">
+<h2 id="orgcd2dc9f">좋은 글들</h2>
+<div class="outline-text-2" id="text-orgcd2dc9f">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/satwikkansal/wtfpython">What the f*ck Python! 😱</a>: 파이썬의 요상한 문법 및 기능을 통한 파이썬 설명</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
