--- a/python-update-log.html
+++ b/python-update-log.html
@@ -37,17 +37,17 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Python 버전별 업데이트 내역</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-orgdd60181" class="outline-2">
-<h2 id="orgdd60181">이 문서는</h2>
-<div class="outline-text-2" id="text-orgdd60181">
+<div id="outline-container-org176b02d" class="outline-2">
+<h2 id="org176b02d">이 문서는</h2>
+<div class="outline-text-2" id="text-org176b02d">
 <p>
 <a href="python.html">Python</a> 의 버전 별 업데이트 내역을 간략히 정리합니다. 내부적인 변화는 특별한 것이 아니면 생략합니다. 다만 3.8 버전 부터 정리하고 이후 업데이트를 보장하지 않습니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7ff5792" class="outline-2">
-<h2 id="org7ff5792">3.8</h2>
-<div class="outline-text-2" id="text-org7ff5792">
+<div id="outline-container-org340648a" class="outline-2">
+<h2 id="org340648a">3.8</h2>
+<div class="outline-text-2" id="text-org340648a">
 <ul class="org-ul">
 <li><code>:=</code> (Walrus) 오페레이터: 좁은(?) 지역 변수. <a href="swift.html">Swift</a> 의 <code>if let</code> 과 용도가 비슷합니다. 조건문 뿐만 아니라 List Comprehension 등에서도 활용이 가능합니다.</li>
 <li>f-string 추가 표현식: <code>f'name={value}'</code> 대신 <code>f'{name</code>}'= 문법을 사용할 수 있습니다. 관련된 내용은 <a href="python-3-f-string.html">Python 3 F-string</a> 글을 참고합시다.</li>
@@ -55,15 +55,15 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org148cfef" class="outline-2">
-<h2 id="org148cfef">관련글</h2>
-<div class="outline-text-2" id="text-org148cfef">
+<div id="outline-container-org1669a09" class="outline-2">
+<h2 id="org1669a09">관련글</h2>
+<div class="outline-text-2" id="text-org1669a09">
 <ul class="org-ul">
 <li><a href="python.html">Python</a></li>
 <li><a target="_blank" href="https://docs.python.org/ko/3.8/whatsnew/3.8.html">🌏 What’s New In Python 3.8</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
