--- a/python.html
+++ b/python.html
@@ -41,21 +41,21 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgde0e9bf">Python</a></li>
-<li><a href="#orge25f44a">관련된 글 목록</a></li>
-<li><a href="#orgb198dc7">메모</a>
+<li><a href="#orgdb9b9c6">Python</a></li>
+<li><a href="#orgfa132e8">관련된 글 목록</a></li>
+<li><a href="#orga5de918">메모</a>
 <ul>
-<li><a href="#orgf085003">List Comprehension</a></li>
-<li><a href="#org660f071">파일 혹은 디렉토리(폴더) 관련</a></li>
+<li><a href="#orga1ca61d">List Comprehension</a></li>
+<li><a href="#org1022ac4">파일 혹은 디렉토리(폴더) 관련</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-orgde0e9bf" class="outline-2">
-<h2 id="orgde0e9bf">Python</h2>
-<div class="outline-text-2" id="text-orgde0e9bf">
+<div id="outline-container-orgdb9b9c6" class="outline-2">
+<h2 id="orgdb9b9c6">Python</h2>
+<div class="outline-text-2" id="text-orgdb9b9c6">
 <p>
 파이썬(Python)은 네덜란드 출신의 귀도 반 로썸(Guide van Rossum)에 의해 탄생한
 프로그래밍 언어입니다. 동적 타이핑을 사용하는 인터프리터 언어라는 점도
@@ -64,9 +64,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orge25f44a" class="outline-2">
-<h2 id="orge25f44a">관련된 글 목록</h2>
-<div class="outline-text-2" id="text-orge25f44a">
+<div id="outline-container-orgfa132e8" class="outline-2">
+<h2 id="orgfa132e8">관련된 글 목록</h2>
+<div class="outline-text-2" id="text-orgfa132e8">
 <ul class="org-ul">
 <li><a href="python-update-log.html">Python 버전별 업데이트 내역</a></li>
 <li><a href="migrate-to-python3.html">수동으로 Python 3로 옮겨가기</a></li>
@@ -78,26 +78,26 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb198dc7" class="outline-2">
-<h2 id="orgb198dc7">메모</h2>
-<div class="outline-text-2" id="text-orgb198dc7">
+<div id="outline-container-orga5de918" class="outline-2">
+<h2 id="orga5de918">메모</h2>
+<div class="outline-text-2" id="text-orga5de918">
 </div>
-<div id="outline-container-orgf085003" class="outline-3">
-<h3 id="orgf085003">List Comprehension</h3>
-<div class="outline-text-3" id="text-orgf085003">
+<div id="outline-container-orga1ca61d" class="outline-3">
+<h3 id="orga1ca61d">List Comprehension</h3>
+<div class="outline-text-3" id="text-orga1ca61d">
 </div>
-<div id="outline-container-orgdd7245e" class="outline-4">
-<h4 id="orgdd7245e">Map</h4>
-<div class="outline-text-4" id="text-orgdd7245e">
+<div id="outline-container-org03dde9b" class="outline-4">
+<h4 id="org03dde9b">Map</h4>
+<div class="outline-text-4" id="text-org03dde9b">
 <div class="org-src-container">
 <pre class="src src-python">[x * x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist]
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org8d2d448" class="outline-4">
-<h4 id="org8d2d448">Filter</h4>
-<div class="outline-text-4" id="text-org8d2d448">
+<div id="outline-container-org6a740b8" class="outline-4">
+<h4 id="org6a740b8">Filter</h4>
+<div class="outline-text-4" id="text-org6a740b8">
 <div class="org-src-container">
 <pre class="src src-python">[x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist <span style="color: #51afef;">if</span> iswhat(x)]
 </pre>
@@ -105,13 +105,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org660f071" class="outline-3">
-<h3 id="org660f071">파일 혹은 디렉토리(폴더) 관련</h3>
-<div class="outline-text-3" id="text-org660f071">
+<div id="outline-container-org1022ac4" class="outline-3">
+<h3 id="org1022ac4">파일 혹은 디렉토리(폴더) 관련</h3>
+<div class="outline-text-3" id="text-org1022ac4">
 </div>
-<div id="outline-container-orgf9927be" class="outline-4">
-<h4 id="orgf9927be">경로에서 파일명만 얻기</h4>
-<div class="outline-text-4" id="text-orgf9927be">
+<div id="outline-container-orgb5db915" class="outline-4">
+<h4 id="orgb5db915">경로에서 파일명만 얻기</h4>
+<div class="outline-text-4" id="text-orgb5db915">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.basename(<span style="color: #98be65;">'/foo/bar/test.txt'</span>)
@@ -120,9 +120,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org0413e63" class="outline-4">
-<h4 id="org0413e63">파일명에서 확장자 분리하기</h4>
-<div class="outline-text-4" id="text-org0413e63">
+<div id="outline-container-org6aeb00c" class="outline-4">
+<h4 id="org6aeb00c">파일명에서 확장자 분리하기</h4>
+<div class="outline-text-4" id="text-org6aeb00c">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.splitext(<span style="color: #98be65;">'test.txt'</span>)
@@ -135,9 +135,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org92ced37" class="outline-4">
-<h4 id="org92ced37">파일 혹은 디렉토리 구분하기</h4>
-<div class="outline-text-4" id="text-org92ced37">
+<div id="outline-container-orgf291531" class="outline-4">
+<h4 id="orgf291531">파일 혹은 디렉토리 구분하기</h4>
+<div class="outline-text-4" id="text-orgf291531">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.isfile(<span style="color: #98be65;">'/foo/bar/some/file.txt'</span>)
@@ -148,9 +148,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org1e42a75" class="outline-4">
-<h4 id="org1e42a75">디렉토리 안의 파일 목록 얻기</h4>
-<div class="outline-text-4" id="text-org1e42a75">
+<div id="outline-container-orgc712a29" class="outline-4">
+<h4 id="orgc712a29">디렉토리 안의 파일 목록 얻기</h4>
+<div class="outline-text-4" id="text-orgc712a29">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.listdir(<span style="color: #98be65;">'.'</span>)
@@ -161,6 +161,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
