--- a/service_links.html
+++ b/service_links.html
@@ -37,9 +37,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">눈에 띄는 서비스 링크 모음</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-orgef38481" class="outline-2">
-<h2 id="orgef38481">채팅</h2>
-<div class="outline-text-2" id="text-orgef38481">
+<div id="outline-container-org2b4ae58" class="outline-2">
+<h2 id="org2b4ae58">채팅</h2>
+<div class="outline-text-2" id="text-org2b4ae58">
 <ul class="org-ul">
 <li><a target="_blank" href="https://slack.com">Slack</a>: 말하지 않아도 다들 아는 채팅 서비스</li>
 <li><a target="_blank" href="https://keybase.io">Keybase</a>: GPG키 기반 채팅 서비스</li>
@@ -48,14 +48,14 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-orga19c910" class="outline-2">
-<h2 id="orga19c910">이미지</h2>
-<div class="outline-text-2" id="text-orga19c910">
+<div id="outline-container-org2a58b03" class="outline-2">
+<h2 id="org2a58b03">이미지</h2>
+<div class="outline-text-2" id="text-org2a58b03">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.remove.bg">removebg</a>: 이미지에서 배경을 (투명으로) 지워주는 서비스</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
