--- a/sitemap.html
+++ b/sitemap.html
@@ -34,14 +34,15 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Sitemap</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header><ul class="org-ul">
-<li><a href="css.html">Cascase Style Sheet</a></li>
+<li><a href="sh.html">Bourne Shell(sh)</a></li>
+<li><a href="css.html">CSS(Cascading Style Sheets)</a></li>
 <li><a href="combine-framework.html">Combine Framework</a></li>
 <li><a href="docker.html">Docker</a></li>
 <li><a href="docker-compose.html">Docker Compose</a></li>
 <li><a href="dockerfile.html">Dockerfile</a></li>
 <li><a href="doom-emacs.html">Doom Emacs</a></li>
 <li><a href="doom-emacs-vs-spacemacs.html">Doom Emacs VS Spacemacs</a></li>
-<li><a href="doom-emacs-shortcuts.html">Doom Emacs 단축키 메모</a></li>
+<li><a href="doom-emacs-shortcuts.html">Doom Emacs 단축키</a></li>
 <li><a href="doom-emacs-sapzil.html">Doom Emacs 삽질기</a></li>
 <li><a href="doom-emacs-sapzil-config.html">Doom Emacs 삽질기 - 설정편</a></li>
 <li><a href="doom-emacs-sapzil-install.html">Doom Emacs 삽질기 - 설치편</a></li>
@@ -66,13 +67,13 @@ gtag('config', 'UA-44534026-1');
 <li><a href="org-tip.html">Org Mode 팁 모음</a></li>
 <li><a href="org-publish.html">Org Publish</a></li>
 <li><a href="org-publish-tips.html">Org Publish 팁 모음</a></li>
-<li><a href="org-spreadsheet.html">Org 스프레드쉬트</a></li>
+<li><a href="org-spreadsheet.html">Org 스프레드시트</a></li>
 <li><a href="poetry.html">Poetry</a></li>
 <li><a href="profile.html">Profile</a></li>
 <li><a href="python.html">Python</a></li>
 <li><a href="python-3-f-string.html">Python 3 F-string</a></li>
 <li><a href="python-3-static-typing.html">Python 3 Static Typing</a></li>
-<li><a href="python-update-log.html">Python 업데이트 기록</a></li>
+<li><a href="python-update-log.html">Python 버전별 업데이트 내역</a></li>
 <li><a href="spacemacs.html">Spacemacs</a></li>
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
@@ -81,10 +82,10 @@ gtag('config', 'UA-44534026-1');
 <li><a href="swift-version-log.html">Swift 버전별 업데이트 내역</a></li>
 <li><a href="swiftui.html">SwiftUI</a></li>
 <li><a href="swiftui-combine.html">SwiftUI + Combine</a></li>
-<li><a href="swiftui-errors.html">SwiftUI Errors</a></li>
 <li><a href="swiftui-in-playground.html">SwiftUI in Playground</a></li>
 <li><a href="swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 <li><a href="swiftui-tips.html">SwiftUI 팁 모음</a></li>
+<li><a href="swiftui-errors.html">SwiftUI에서 겪은 에러들</a></li>
 <li><a href="tmux.html">Tmux</a></li>
 <li><a href="vim.html">Vim</a></li>
 <li><a href="caffeinate.html">caffeinate</a></li>
@@ -96,7 +97,6 @@ gtag('config', 'UA-44534026-1');
 <li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
 <li><a href="org-publish-sapzil.html">org-publish 삽질기</a></li>
 <li><a href="pyenv.html">pyenv</a></li>
-<li><a href="sh.html">sh</a></li>
 <li><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
 <li><a href="etc-resource-links.html">기타 리소스 링크 모음</a></li>
 <li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
