--- a/spacemacs.html
+++ b/spacemacs.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Spacemacs</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org74a1894" class="outline-2">
-<h2 id="org74a1894">Spacemacs</h2>
-<div class="outline-text-2" id="text-org74a1894">
+<div id="outline-container-org63ab379" class="outline-2">
+<h2 id="org63ab379">Spacemacs</h2>
+<div class="outline-text-2" id="text-org63ab379">
 <p>
 스페이스맥스(Spacemacs)는 Community Driven Emacs Configuration 으로 거대한 설정
 파일 묶음 프로젝트입니다. <a href="vim.html">Vim</a> 키맵을 구현하는 evil 을 기반으로 많은 확장들을
@@ -55,9 +55,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org9bdc8b6" class="outline-2">
-<h2 id="org9bdc8b6">관련글</h2>
-<div class="outline-text-2" id="text-org9bdc8b6">
+<div id="outline-container-orgcfb48df" class="outline-2">
+<h2 id="orgcfb48df">관련글</h2>
+<div class="outline-text-2" id="text-orgcfb48df">
 <ul class="org-ul">
 <li><a href="./emacs.html">Emacs</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
@@ -67,9 +67,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org4331a93" class="outline-2">
-<h2 id="org4331a93">관련 외부 링크</h2>
-<div class="outline-text-2" id="text-org4331a93">
+<div id="outline-container-org356f190" class="outline-2">
+<h2 id="org356f190">관련 외부 링크</h2>
+<div class="outline-text-2" id="text-org356f190">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏
 The (Subjective) Spacemacs Howto</a>:
@@ -78,6 +78,6 @@ The (Subjective) Spacemacs Howto</a>:
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
