--- a/swift-5-1.html
+++ b/swift-5-1.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Swift 5.1</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-orgd44e1be" class="outline-2">
-<h2 id="orgd44e1be">업데이트 내역</h2>
-<div class="outline-text-2" id="text-orgd44e1be">
+<div id="outline-container-org488a65d" class="outline-2">
+<h2 id="org488a65d">업데이트 내역</h2>
+<div class="outline-text-2" id="text-org488a65d">
 <p>
 블로그에 미리 정리해둔 글이 있는 관계로 직접 쓰지는 않고 링크만 정리합니다.
 </p>
@@ -65,6 +65,6 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
