--- a/swift-tips.html
+++ b/swift-tips.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Swift Tips</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-orgb791ea7" class="outline-2">
-<h2 id="orgb791ea7">일부만 Import 하기</h2>
-<div class="outline-text-2" id="text-orgb791ea7">
+<div id="outline-container-org74f901e" class="outline-2">
+<h2 id="org74f901e">일부만 Import 하기</h2>
+<div class="outline-text-2" id="text-org74f901e">
 <p>
 <code>import</code> 문을 사용할 때 아래처럼 사용할 수도 있습니다.
 </p>
@@ -55,6 +55,6 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
