--- a/swiftui-combine.html
+++ b/swiftui-combine.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">SwiftUI + Combine</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-orgbbfed2d" class="outline-2">
-<h2 id="orgbbfed2d">SwiftUI + Combine</h2>
-<div class="outline-text-2" id="text-orgbbfed2d">
+<div id="outline-container-org5209041" class="outline-2">
+<h2 id="org5209041">SwiftUI + Combine</h2>
+<div class="outline-text-2" id="text-org5209041">
 <p>
 이 글은 SwiftUI로 UI를 코딩할 때 사용하게 되는
 <a href="combine-framework.html">Combine Framework</a> 기능을 다룹니다. 아마도
@@ -48,9 +48,9 @@ Property Wrapper로 구현된 것들 위주로 메모될 가능성이 큽니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org362c044" class="outline-2">
-<h2 id="org362c044">State</h2>
-<div class="outline-text-2" id="text-org362c044">
+<div id="outline-container-orgeccfa83" class="outline-2">
+<h2 id="orgeccfa83">State</h2>
+<div class="outline-text-2" id="text-orgeccfa83">
 <p>
 <code>@State</code> 는 뷰(View)가 해당 프로퍼티의 값 변화를 모니터링 할 수 있도록 해 줍니다.
 </p>
@@ -90,9 +90,9 @@ Property Wrapper로 구현된 것들 위주로 메모될 가능성이 큽니다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga6bd386" class="outline-2">
-<h2 id="orga6bd386">ObservedObject</h2>
-<div class="outline-text-2" id="text-orga6bd386">
+<div id="outline-container-orgf33eba1" class="outline-2">
+<h2 id="orgf33eba1">ObservedObject</h2>
+<div class="outline-text-2" id="text-orgf33eba1">
 <p>
 <code>@ObservedObject</code> 는 <code>@State</code> 와 비슷하지만 기본 타입이 아닌 여러 프로퍼티나
 메소드 등으로 구현된 커스텀 클래스 타입일 경우에 유용하게 사용할 수 있습니다.
@@ -140,9 +140,9 @@ Property Wrapper로 구현된 것들 위주로 메모될 가능성이 큽니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0231e3b" class="outline-2">
-<h2 id="org0231e3b">EnvironmentObject</h2>
-<div class="outline-text-2" id="text-org0231e3b">
+<div id="outline-container-orgfbda86b" class="outline-2">
+<h2 id="orgfbda86b">EnvironmentObject</h2>
+<div class="outline-text-2" id="text-orgfbda86b">
 <p>
 <code>@EnvironmentObject</code> 는 <code>@ObservedObject</code> 와 비슷하게 쓸 수 있지만, 다른
 특징으로 공유 환경을 만들어 준다는 점이 있습니다.
@@ -190,9 +190,9 @@ window.<span style="color: #dcaeea;">rootViewController</span> =
 </p>
 </div>
 </div>
-<div id="outline-container-org0014ecc" class="outline-2">
-<h2 id="org0014ecc">달러 연산자?</h2>
-<div class="outline-text-2" id="text-org0014ecc">
+<div id="outline-container-orgaae42c6" class="outline-2">
+<h2 id="orgaae42c6">달러 연산자?</h2>
+<div class="outline-text-2" id="text-orgaae42c6">
 <p>
 상호작용이 가능한 컴포넌트의 경우 UI의 값이 바뀌면 데이터의 값도 자동으로
 바뀌어야 합니다. MVVM의 ViewModel이 이러한 방식의 개념이지요. 어쨌든 이럴때
@@ -216,9 +216,9 @@ window.<span style="color: #dcaeea;">rootViewController</span> =
 </p>
 </div>
 </div>
-<div id="outline-container-orgb01bce1" class="outline-2">
-<h2 id="orgb01bce1">관련글</h2>
-<div class="outline-text-2" id="text-orgb01bce1">
+<div id="outline-container-org14d7c16" class="outline-2">
+<h2 id="org14d7c16">관련글</h2>
+<div class="outline-text-2" id="text-org14d7c16">
 <ul class="org-ul">
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swiftui.html">SwiftUI</a></li>
@@ -226,6 +226,6 @@ window.<span style="color: #dcaeea;">rootViewController</span> =
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
