--- a/swiftui-errors.html
+++ b/swiftui-errors.html
@@ -41,25 +41,25 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org00f3186">이 글은</a></li>
-<li><a href="#orgf3fe710">Cannot assign to property: 'self' is immutable</a></li>
-<li><a href="#org95f2a99">관련글</a></li>
+<li><a href="#orgc6a1d30">이 글은</a></li>
+<li><a href="#orgb7fe2fc">Cannot assign to property: 'self' is immutable</a></li>
+<li><a href="#orgc0275f6">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org00f3186" class="outline-2">
-<h2 id="org00f3186">이 글은</h2>
-<div class="outline-text-2" id="text-org00f3186">
+<div id="outline-container-orgc6a1d30" class="outline-2">
+<h2 id="orgc6a1d30">이 글은</h2>
+<div class="outline-text-2" id="text-orgc6a1d30">
 <p>
 <a href="swiftui.html">SwiftUI</a>와 관련 있을지도 모를 에러 메시지를 정리합니다.
 경험에 의해 정리되기 때문에 업데이트가 느릴 수 있습니다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf3fe710" class="outline-2">
-<h2 id="orgf3fe710">Cannot assign to property: 'self' is immutable</h2>
-<div class="outline-text-2" id="text-orgf3fe710">
+<div id="outline-container-orgb7fe2fc" class="outline-2">
+<h2 id="orgb7fe2fc">Cannot assign to property: 'self' is immutable</h2>
+<div class="outline-text-2" id="text-orgb7fe2fc">
 <p>
 <a href="swiftui.html">SwiftUI</a>의 모든 뷰는 immutable한 구조체 인스턴스가 생성되는
 형태로 동작합니다. 따라서 자신의 모든 프로퍼티를 바꾸는 행위는 불가능합니다.
@@ -71,15 +71,15 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org95f2a99" class="outline-2">
-<h2 id="org95f2a99">관련글</h2>
-<div class="outline-text-2" id="text-org95f2a99">
+<div id="outline-container-orgc0275f6" class="outline-2">
+<h2 id="orgc0275f6">관련글</h2>
+<div class="outline-text-2" id="text-orgc0275f6">
 <ul class="org-ul">
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swiftui.html">SwiftUI</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
