--- a/swiftui-macos-components.html
+++ b/swiftui-macos-components.html
@@ -41,9 +41,9 @@ gtag('config', 'UA-44534026-1');
 그냥 제가 사용해 본 컴포넌트를 간략한 예제와 함께 정리하는 글입니다.
 </p>
 
-<div id="outline-container-org03bed51" class="outline-2">
-<h2 id="org03bed51">TabView</h2>
-<div class="outline-text-2" id="text-org03bed51">
+<div id="outline-container-org9e403e2" class="outline-2">
+<h2 id="org9e403e2">TabView</h2>
+<div class="outline-text-2" id="text-org9e403e2">
 <div class="org-src-container">
 <pre class="src src-swift">TabView {
     <span style="color: #c678dd;">Text</span>(<span style="color: #98be65;">"Content 1"</span>).<span style="color: #dcaeea;">tabItem</span> {
@@ -66,14 +66,14 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 
-<div id="outline-container-org5f82c30" class="outline-2">
-<h2 id="org5f82c30">관련글</h2>
-<div class="outline-text-2" id="text-org5f82c30">
+<div id="outline-container-orgaa00a81" class="outline-2">
+<h2 id="orgaa00a81">관련글</h2>
+<div class="outline-text-2" id="text-orgaa00a81">
 <ul class="org-ul">
 <li><a href="./swift.html">Swift</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
