--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -41,48 +41,48 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org9833444">Doom Emacs 단축키</a></li>
-<li><a href="#org05f22da">공통(Common)</a>
+<li><a href="#org022c9df">Doom Emacs 단축키</a></li>
+<li><a href="#orgcb472ad">공통(Common)</a>
 <ul>
-<li><a href="#org25f30f3">설정(Configuration) 관련</a></li>
-<li><a href="#org9a4d19e">파일(File) 관련</a></li>
-<li><a href="#org637a1bd">버퍼(Buffer) 관련</a></li>
-<li><a href="#orgbffce5b">프로젝트(Project)</a></li>
-<li><a href="#org95842c3">창(Window)</a></li>
-<li><a href="#orgac8c652">폴딩(Folding)</a></li>
-<li><a href="#org74e41cb">쉘(Shell) 혹은 터미널(Terminal)</a></li>
-<li><a href="#org2719819">템플릿(Snippets)</a></li>
-<li><a href="#orgd9bb23f">검색(Search)</a></li>
+<li><a href="#orgc33c27d">설정(Configuration) 관련</a></li>
+<li><a href="#org11a03f0">파일(File) 관련</a></li>
+<li><a href="#org217eadd">버퍼(Buffer) 관련</a></li>
+<li><a href="#org0a1cbd4">프로젝트(Project)</a></li>
+<li><a href="#org272b037">창(Window)</a></li>
+<li><a href="#org6d81c4b">폴딩(Folding)</a></li>
+<li><a href="#org5363dc4">쉘(Shell) 혹은 터미널(Terminal)</a></li>
+<li><a href="#org77f39c1">템플릿(Snippets)</a></li>
+<li><a href="#org645e399">검색(Search)</a></li>
 </ul>
 </li>
-<li><a href="#org48b8f5b">고급 편집</a>
+<li><a href="#orgb8ad90e">고급 편집</a>
 <ul>
-<li><a href="#org5dbd544">점프(Jump)</a></li>
-<li><a href="#orge43a268">멀티커서(Multiple Cursors) - evil-multiedit</a></li>
-<li><a href="#org83baeee">멀티커서(Multiple Cursors) - evil-mc</a></li>
-<li><a href="#org2abb10b">특수 텍스트 변환</a></li>
+<li><a href="#org3e7b700">점프(Jump)</a></li>
+<li><a href="#org6ca3b25">멀티커서(Multiple Cursors) - evil-multiedit</a></li>
+<li><a href="#orga804c18">멀티커서(Multiple Cursors) - evil-mc</a></li>
+<li><a href="#orgd913edc">특수 텍스트 변환</a></li>
 </ul>
 </li>
-<li><a href="#orgad68b59">특수</a>
+<li><a href="#org77ec2e2">특수</a>
 <ul>
-<li><a href="#org4f43e2f">Emacs Lisp 관련</a></li>
-<li><a href="#org1d34bfc">프로그래밍 관련</a></li>
+<li><a href="#orgac79b39">Emacs Lisp 관련</a></li>
+<li><a href="#orga319558">프로그래밍 관련</a></li>
 </ul>
 </li>
-<li><a href="#org807879b">Org Mode</a>
+<li><a href="#orgdf07da9">Org Mode</a>
 <ul>
-<li><a href="#orgf3f00bb">Org 공통</a></li>
-<li><a href="#orga38317c">테이블 스프레드쉬트</a></li>
+<li><a href="#org0a4db50">Org 공통</a></li>
+<li><a href="#orgf3e7547">테이블 스프레드쉬트</a></li>
 </ul>
 </li>
-<li><a href="#orga5ed969">관련글</a></li>
+<li><a href="#orgeaaa7df">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org9833444" class="outline-2">
-<h2 id="org9833444">Doom Emacs 단축키</h2>
-<div class="outline-text-2" id="text-org9833444">
+<div id="outline-container-org022c9df" class="outline-2">
+<h2 id="org022c9df">Doom Emacs 단축키</h2>
+<div class="outline-text-2" id="text-org022c9df">
 <p>
 실제로 사용하면서 유용하다 싶은 <a href="doom-emacs.html">Doom Emacs</a> 단축키를
 정리합니다. 모든 단축키는 <code>SPC ?</code> 키로 직접 확인해봅시다.
@@ -90,29 +90,29 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org05f22da" class="outline-2">
-<h2 id="org05f22da">공통(Common)</h2>
-<div class="outline-text-2" id="text-org05f22da">
+<div id="outline-container-orgcb472ad" class="outline-2">
+<h2 id="orgcb472ad">공통(Common)</h2>
+<div class="outline-text-2" id="text-orgcb472ad">
 </div>
-<div id="outline-container-org25f30f3" class="outline-3">
-<h3 id="org25f30f3">설정(Configuration) 관련</h3>
-<div class="outline-text-3" id="text-org25f30f3">
+<div id="outline-container-orgc33c27d" class="outline-3">
+<h3 id="orgc33c27d">설정(Configuration) 관련</h3>
+<div class="outline-text-3" id="text-orgc33c27d">
 <ul class="org-ul">
 <li><code>SPC f p</code> 설정 파일 열기 (선택 다이얼로그가 뜬다)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9a4d19e" class="outline-3">
-<h3 id="org9a4d19e">파일(File) 관련</h3>
-<div class="outline-text-3" id="text-org9a4d19e">
+<div id="outline-container-org11a03f0" class="outline-3">
+<h3 id="org11a03f0">파일(File) 관련</h3>
+<div class="outline-text-3" id="text-org11a03f0">
 <ul class="org-ul">
 <li><code>SPC .</code> 현재 디렉토리에서 파일 열기 (생성하기도 가능)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org637a1bd" class="outline-3">
-<h3 id="org637a1bd">버퍼(Buffer) 관련</h3>
-<div class="outline-text-3" id="text-org637a1bd">
+<div id="outline-container-org217eadd" class="outline-3">
+<h3 id="org217eadd">버퍼(Buffer) 관련</h3>
+<div class="outline-text-3" id="text-org217eadd">
 <ul class="org-ul">
 <li><code>SPC ,</code> 혹은 <code>SPC b b</code> 워크스페이스(혹은 프로젝트) 버퍼 전환</li>
 <li><code>SPC `</code> 이전 버퍼로 전환</li>
@@ -121,18 +121,18 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-orgbffce5b" class="outline-3">
-<h3 id="orgbffce5b">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-orgbffce5b">
+<div id="outline-container-org0a1cbd4" class="outline-3">
+<h3 id="org0a1cbd4">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org0a1cbd4">
 <ul class="org-ul">
 <li><code>SPC p p</code> 프로젝트 전환</li>
 <li><code>SPC SPC</code> 프로젝트 파일 열기</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org95842c3" class="outline-3">
-<h3 id="org95842c3">창(Window)</h3>
-<div class="outline-text-3" id="text-org95842c3">
+<div id="outline-container-org272b037" class="outline-3">
+<h3 id="org272b037">창(Window)</h3>
+<div class="outline-text-3" id="text-org272b037">
 <p>
 참고로 이맥스에서 윈도우란 창이 분할된 것 혹은 페인(Pane)이라 불리우는 것을
 의미하니 용어에 주의하자.
@@ -151,9 +151,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-orgac8c652" class="outline-3">
-<h3 id="orgac8c652">폴딩(Folding)</h3>
-<div class="outline-text-3" id="text-orgac8c652">
+<div id="outline-container-org6d81c4b" class="outline-3">
+<h3 id="org6d81c4b">폴딩(Folding)</h3>
+<div class="outline-text-3" id="text-org6d81c4b">
 <ul class="org-ul">
 <li><code>z f</code> 선택영역 접기(폴딩)</li>
 <li><code>z a</code> 폴딩 토글하기</li>
@@ -164,25 +164,25 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org74e41cb" class="outline-3">
-<h3 id="org74e41cb">쉘(Shell) 혹은 터미널(Terminal)</h3>
-<div class="outline-text-3" id="text-org74e41cb">
+<div id="outline-container-org5363dc4" class="outline-3">
+<h3 id="org5363dc4">쉘(Shell) 혹은 터미널(Terminal)</h3>
+<div class="outline-text-3" id="text-org5363dc4">
 <ul class="org-ul">
 <li><code>SPC o t</code> 터미널 열기</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2719819" class="outline-3">
-<h3 id="org2719819">템플릿(Snippets)</h3>
-<div class="outline-text-3" id="text-org2719819">
+<div id="outline-container-org77f39c1" class="outline-3">
+<h3 id="org77f39c1">템플릿(Snippets)</h3>
+<div class="outline-text-3" id="text-org77f39c1">
 <ul class="org-ul">
 <li><code>SPC s /</code> 스니펫 목록 및 검색하기</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd9bb23f" class="outline-3">
-<h3 id="orgd9bb23f">검색(Search)</h3>
-<div class="outline-text-3" id="text-orgd9bb23f">
+<div id="outline-container-org645e399" class="outline-3">
+<h3 id="org645e399">검색(Search)</h3>
+<div class="outline-text-3" id="text-org645e399">
 <ul class="org-ul">
 <li><code>SPC s p</code> 프로젝트에서 검색(search in project)</li>
 <li><code>SPC s d</code> 디렉토리에서 검색(search in directory)</li>
@@ -191,13 +191,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org48b8f5b" class="outline-2">
-<h2 id="org48b8f5b">고급 편집</h2>
-<div class="outline-text-2" id="text-org48b8f5b">
+<div id="outline-container-orgb8ad90e" class="outline-2">
+<h2 id="orgb8ad90e">고급 편집</h2>
+<div class="outline-text-2" id="text-orgb8ad90e">
 </div>
-<div id="outline-container-org5dbd544" class="outline-3">
-<h3 id="org5dbd544">점프(Jump)</h3>
-<div class="outline-text-3" id="text-org5dbd544">
+<div id="outline-container-org3e7b700" class="outline-3">
+<h3 id="org3e7b700">점프(Jump)</h3>
+<div class="outline-text-3" id="text-org3e7b700">
 <ul class="org-ul">
 <li><code>f [character]</code> 해당 문자로 점프(vim)</li>
 <li><code>F [character]</code> 해당 문자로 역방향 점프(vim)</li>
@@ -212,9 +212,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-orge43a268" class="outline-3">
-<h3 id="orge43a268">멀티커서(Multiple Cursors) - evil-multiedit</h3>
-<div class="outline-text-3" id="text-orge43a268">
+<div id="outline-container-org6ca3b25" class="outline-3">
+<h3 id="org6ca3b25">멀티커서(Multiple Cursors) - evil-multiedit</h3>
+<div class="outline-text-3" id="text-org6ca3b25">
 <ul class="org-ul">
 <li><code>M-d</code> 현재 커서 위치의 단어 혹은 선택영역 선택 혹은 아래 방향으로 같은 단어를 하나 검색해서 선택</li>
 <li><code>M-D</code> 현재 커서 위치의 단어 혹은 선택영역 선택 혹은 윗쪽 방향으로 같은 단어를 하나 검색해서 선택</li>
@@ -228,9 +228,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org83baeee" class="outline-3">
-<h3 id="org83baeee">멀티커서(Multiple Cursors) - evil-mc</h3>
-<div class="outline-text-3" id="text-org83baeee">
+<div id="outline-container-orga804c18" class="outline-3">
+<h3 id="orga804c18">멀티커서(Multiple Cursors) - evil-mc</h3>
+<div class="outline-text-3" id="text-orga804c18">
 <ul class="org-ul">
 <li><code>g z z</code> 현재 위치에 커서 만들기</li>
 <li><code>g z j</code> 현재 커서 위치에서 서브커서를 만들고 아래로 이동 (<code>g z k</code> 는 위로)</li>
@@ -240,22 +240,22 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org2abb10b" class="outline-3">
-<h3 id="org2abb10b">특수 텍스트 변환</h3>
-<div class="outline-text-3" id="text-org2abb10b">
+<div id="outline-container-orgd913edc" class="outline-3">
+<h3 id="orgd913edc">특수 텍스트 변환</h3>
+<div class="outline-text-3" id="text-orgd913edc">
 <ul class="org-ul">
 <li><code>!</code> 연관 텍스트로 변환 rotate-text</li>
 </ul>
 </div>
 </div>
 </div>
-<div id="outline-container-orgad68b59" class="outline-2">
-<h2 id="orgad68b59">특수</h2>
-<div class="outline-text-2" id="text-orgad68b59">
+<div id="outline-container-org77ec2e2" class="outline-2">
+<h2 id="org77ec2e2">특수</h2>
+<div class="outline-text-2" id="text-org77ec2e2">
 </div>
-<div id="outline-container-org4f43e2f" class="outline-3">
-<h3 id="org4f43e2f">Emacs Lisp 관련</h3>
-<div class="outline-text-3" id="text-org4f43e2f">
+<div id="outline-container-orgac79b39" class="outline-3">
+<h3 id="orgac79b39">Emacs Lisp 관련</h3>
+<div class="outline-text-3" id="text-orgac79b39">
 <ul class="org-ul">
 <li><code>SPC :</code> 함수 실행하기(Emacs 의 <code>M-x</code> 와 동일). 콜론 주의.</li>
 <li><code>SPC ;</code> 명령 실행하기(eval expression). 세미콜론임에 주의</li>
@@ -267,9 +267,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org1d34bfc" class="outline-3">
-<h3 id="org1d34bfc">프로그래밍 관련</h3>
-<div class="outline-text-3" id="text-org1d34bfc">
+<div id="outline-container-orga319558" class="outline-3">
+<h3 id="orga319558">프로그래밍 관련</h3>
+<div class="outline-text-3" id="text-orga319558">
 <ul class="org-ul">
 <li><code>g c</code> 선택영역을 주석(commenting)으로 처리하거나 혹은 해제(uncommenting) (evil-nerd-commenter)</li>
 <li><code>SPC c d</code> 레퍼런스로 이동(Look up reference)</li>
@@ -278,22 +278,22 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org807879b" class="outline-2">
-<h2 id="org807879b">Org Mode</h2>
-<div class="outline-text-2" id="text-org807879b">
+<div id="outline-container-orgdf07da9" class="outline-2">
+<h2 id="orgdf07da9">Org Mode</h2>
+<div class="outline-text-2" id="text-orgdf07da9">
 </div>
-<div id="outline-container-orgf3f00bb" class="outline-3">
-<h3 id="orgf3f00bb">Org 공통</h3>
-<div class="outline-text-3" id="text-orgf3f00bb">
+<div id="outline-container-org0a4db50" class="outline-3">
+<h3 id="org0a4db50">Org 공통</h3>
+<div class="outline-text-3" id="text-org0a4db50">
 <ul class="org-ul">
 <li><code>SPC m t</code> TO DO 마크 (띄어서 쓴 이유는 org agenda에 안 걸리게 하기 위함입니다)</li>
 <li><code>SPC m p</code> 우선순위(priority)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orga38317c" class="outline-3">
-<h3 id="orga38317c">테이블 스프레드쉬트</h3>
-<div class="outline-text-3" id="text-orga38317c">
+<div id="outline-container-orgf3e7547" class="outline-3">
+<h3 id="orgf3e7547">테이블 스프레드쉬트</h3>
+<div class="outline-text-3" id="text-orgf3e7547">
 <ul class="org-ul">
 <li><code>SPC m b h</code> 테이블에서 커서 위치의 필드 정보 <code>org-table-field-info</code></li>
 <li><code>C-c }</code> 테이블 필드 정보 오버레이 토글 <code>org-table-toggle-coordinate-overlays</code></li>
@@ -301,9 +301,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orga5ed969" class="outline-2">
-<h2 id="orga5ed969">관련글</h2>
-<div class="outline-text-2" id="text-orga5ed969">
+<div id="outline-container-orgeaaa7df" class="outline-2">
+<h2 id="orgeaaa7df">관련글</h2>
+<div class="outline-text-2" id="text-orgeaaa7df">
 <ul class="org-ul">
 <li><a href="doom-emacs.html">Doom Emacs</a></li>
 <li><a href="emacs.html">Emacs</a></li>
@@ -322,6 +322,6 @@ gtag('config', 'UA-44534026-1');
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
