--- a/homebrew.html
+++ b/homebrew.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Homebrew</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org1305b67" class="outline-2">
-<h2 id="org1305b67">Homebrew</h2>
-<div class="outline-text-2" id="text-org1305b67">
+<div id="outline-container-org33b0e3f" class="outline-2">
+<h2 id="org33b0e3f">Homebrew</h2>
+<div class="outline-text-2" id="text-org33b0e3f">
 <p>
 Homebrew는 macOS용 패키지 관리자입니다. 기본 유틸리티가 아닌 다양한 소프트웨어를
 내려받아 자동으로 설치할 수 있게 도와줍니다. 또한 root 사용자가 아니어도 사용할
@@ -48,9 +48,9 @@ Homebrew는 macOS용 패키지 관리자입니다. 기본 유틸리티가 아닌
 </p>
 </div>
 </div>
-<div id="outline-container-orgfa60885" class="outline-2">
-<h2 id="orgfa60885">설치</h2>
-<div class="outline-text-2" id="text-orgfa60885">
+<div id="outline-container-org496dc1c" class="outline-2">
+<h2 id="org496dc1c">설치</h2>
+<div class="outline-text-2" id="text-org496dc1c">
 <p>
 쉘에서 아래 커맨드를 복사해서 붙여 넣습니다.
 </p>
@@ -65,9 +65,9 @@ Homebrew는 macOS용 패키지 관리자입니다. 기본 유틸리티가 아닌
 </p>
 </div>
 </div>
-<div id="outline-container-orgac6bec5" class="outline-2">
-<h2 id="orgac6bec5">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgac6bec5">
+<div id="outline-container-org8959517" class="outline-2">
+<h2 id="org8959517">기본 사용법</h2>
+<div class="outline-text-2" id="text-org8959517">
 <p>
 아래 커맨드로 패키지를 검색할 수 있습니다.
 </p>
@@ -154,9 +154,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgeaa2ab9" class="outline-2">
-<h2 id="orgeaa2ab9">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-orgeaa2ab9">
+<div id="outline-container-org06655b6" class="outline-2">
+<h2 id="org06655b6">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org06655b6">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면 해당 패키지의 구 버전도 여전히
 남아있습니다. 이 경우 구 버전을 사용하고 싶자면 <code>switch</code> 커맨드를 사용할 수
@@ -171,9 +171,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org0b7e0f1" class="outline-2">
-<h2 id="org0b7e0f1">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org0b7e0f1">
+<div id="outline-container-orge28e6c0" class="outline-2">
+<h2 id="orge28e6c0">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-orge28e6c0">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 합니다. 예를
 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있습니다.
@@ -272,9 +272,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgbcaf9b7" class="outline-2">
-<h2 id="orgbcaf9b7">Cask</h2>
-<div class="outline-text-2" id="text-orgbcaf9b7">
+<div id="outline-container-orgac882d9" class="outline-2">
+<h2 id="orgac882d9">Cask</h2>
+<div class="outline-text-2" id="text-orgac882d9">
 <p>
 cask는 macOS용 응용 소프트웨어나 다양한 리소스를 설치할 수 있게 도와주는 확장
 도구입니다.
@@ -306,6 +306,6 @@ iTerm 2 의 정보를 찾아봅시다.
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
