--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@ gtag('config', 'UA-44534026-1');
 모든 글은 <a href="emacs.html">Emacs</a> 상에서 <a href="org-mode.html">Org Mode</a>로 글을 작성해서 <a href="org-publish.html">Org Publish</a>를 이용해 퍼블리시 합니다.
 </p>
 
-<div id="outline-container-org164dc77" class="outline-2">
-<h2 id="org164dc77">탐색 시작하기 좋은 페이지</h2>
-<div class="outline-text-2" id="text-org164dc77">
+<div id="outline-container-orga8c2530" class="outline-2">
+<h2 id="orga8c2530">탐색 시작하기 좋은 페이지</h2>
+<div class="outline-text-2" id="text-orga8c2530">
 <p>
 몇 가지 분류로 정리한 가이드 페이지들입니다.
 </p>
 </div>
-<div id="outline-container-org9a6b2ed" class="outline-3">
-<h3 id="org9a6b2ed">프로필(Profile)</h3>
-<div class="outline-text-3" id="text-org9a6b2ed">
+<div id="outline-container-org6db385d" class="outline-3">
+<h3 id="org6db385d">프로필(Profile)</h3>
+<div class="outline-text-3" id="text-org6db385d">
 <ul class="org-ul">
 <li><a href="./profile.html">Profile</a>: 사적인 정보(?)는 없는 프로필입니다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf4a2e4e" class="outline-3">
-<h3 id="orgf4a2e4e">에디터(Editors)</h3>
-<div class="outline-text-3" id="text-orgf4a2e4e">
+<div id="outline-container-orge48369d" class="outline-3">
+<h3 id="orge48369d">에디터(Editors)</h3>
+<div class="outline-text-3" id="text-orge48369d">
 <ul class="org-ul">
 <li><a href="emacs.html">Emacs</a>: 이맥스와 관련된 글들을 모아 놨습니다.</li>
 <li><a href="doom-emacs.html">Doom Emacs</a>: 이맥스와 관련된 글들 중 둠 이맥스와 관련된 것들만 따로 모아 봤습니다.</li>
@@ -78,9 +78,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org846c188" class="outline-3">
-<h3 id="org846c188">프로그래밍 언어(Programming Language)</h3>
-<div class="outline-text-3" id="text-org846c188">
+<div id="outline-container-orga74a526" class="outline-3">
+<h3 id="orga74a526">프로그래밍 언어(Programming Language)</h3>
+<div class="outline-text-3" id="text-orga74a526">
 <ul class="org-ul">
 <li><a href="swift.html">Swift</a>: 가장 좋아하는 프로그래밍 언어인 스위프트와 관련된 글들을 모은 페이지입니다.</li>
 <li><a href="python.html">Python</a>: 두 번째로 좋아하는 프로그래밍 언어인 파이썬과 관련된 글들을 모은 페이지입니다.</li>
@@ -91,9 +91,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org0685d45" class="outline-3">
-<h3 id="org0685d45">개발용 도구들</h3>
-<div class="outline-text-3" id="text-org0685d45">
+<div id="outline-container-org19588e6" class="outline-3">
+<h3 id="org19588e6">개발용 도구들</h3>
+<div class="outline-text-3" id="text-org19588e6">
 <ul class="org-ul">
 <li><a href="git.html">Git</a>: 깃과 관련된 정보를 모아둔 페이지입니다.</li>
 <li><a href="docker.html">Docker</a>: 도커와 관련된 정보를 모아둔 페이지입니다.</li>
@@ -101,9 +101,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org1bed2a7" class="outline-3">
-<h3 id="org1bed2a7">기타 도구들</h3>
-<div class="outline-text-3" id="text-org1bed2a7">
+<div id="outline-container-org5627f1f" class="outline-3">
+<h3 id="org5627f1f">기타 도구들</h3>
+<div class="outline-text-3" id="text-org5627f1f">
 <ul class="org-ul">
 <li><a href="tmux.html">Tmux</a>: Tmux 사용법을 정리하는 페이지입니다.</li>
 <li><a href="homebrew.html">Homebrew</a>: 맥 용 패키지 관리자 흠브루에 관한 내용을 정리하는 페이지입니다.</li>
@@ -113,18 +113,18 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd9d658f" class="outline-3">
-<h3 id="orgd9d658f">분류하기 애매한 것들</h3>
-<div class="outline-text-3" id="text-orgd9d658f">
+<div id="outline-container-orgb728120" class="outline-3">
+<h3 id="orgb728120">분류하기 애매한 것들</h3>
+<div class="outline-text-3" id="text-orgb728120">
 <ul class="org-ul">
 <li><a href="mongodb.html">MongoDB</a>: 몽고DB와 관련된 내용을 정리하는 페이지입니다.</li>
 <li><a href="github-actions.html">Github Actions</a>: 깃헙 액션에 관한 내용을 정리하는 페이지입니다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1822954" class="outline-3">
-<h3 id="org1822954">링크 모음</h3>
-<div class="outline-text-3" id="text-org1822954">
+<div id="outline-container-org6ccbd1a" class="outline-3">
+<h3 id="org6ccbd1a">링크 모음</h3>
+<div class="outline-text-3" id="text-org6ccbd1a">
 <ul class="org-ul">
 <li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
 <li><a href="python-links.html">파이썬(Python) 관련 링크 모음</a></li>
@@ -138,9 +138,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org32930d9" class="outline-3">
-<h3 id="org32930d9">기타</h3>
-<div class="outline-text-3" id="text-org32930d9">
+<div id="outline-container-org59ac041" class="outline-3">
+<h3 id="org59ac041">기타</h3>
+<div class="outline-text-3" id="text-org59ac041">
 <ul class="org-ul">
 <li><a href="english.html">영어 노트</a>: 개인용 노트입니다.</li>
 <li><a href="italian.html">이탈리아어 노트</a>: 이것도 개인용 노트입니다.</li>
@@ -154,6 +154,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
