--- a/magit.html
+++ b/magit.html
@@ -41,23 +41,23 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org4b8f18f">소개</a></li>
-<li><a href="#org6d68c26">magit-status</a></li>
-<li><a href="#org67e0c00">Stage</a></li>
-<li><a href="#org108f0e6">Commit</a></li>
-<li><a href="#orgfacdb8e">Log</a></li>
-<li><a href="#orgd6fcd08">Push</a></li>
-<li><a href="#orgf352b2d">Pull</a></li>
-<li><a href="#org58accb9">Branch</a></li>
-<li><a href="#orgb3f5ba1">기타</a></li>
-<li><a href="#org4223d1d">관련글</a></li>
+<li><a href="#org02b0a51">소개</a></li>
+<li><a href="#orgbb6b0ad">magit-status</a></li>
+<li><a href="#orgdffc575">Stage</a></li>
+<li><a href="#orgbe87215">Commit</a></li>
+<li><a href="#org236d13f">Log</a></li>
+<li><a href="#org3826615">Push</a></li>
+<li><a href="#org541d8d7">Pull</a></li>
+<li><a href="#orgb77afde">Branch</a></li>
+<li><a href="#orga937b56">기타</a></li>
+<li><a href="#org2f249ce">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org4b8f18f" class="outline-2">
-<h2 id="org4b8f18f">소개</h2>
-<div class="outline-text-2" id="text-org4b8f18f">
+<div id="outline-container-org02b0a51" class="outline-2">
+<h2 id="org02b0a51">소개</h2>
+<div class="outline-text-2" id="text-org02b0a51">
 <blockquote>
 <p>
 It's Magit! A Git Porcelain inside Emacs
@@ -76,9 +76,9 @@ Emacs의 킬러 소프트웨어 중 하나로 꼽을 정도로 막강합니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org6d68c26" class="outline-2">
-<h2 id="org6d68c26">magit-status</h2>
-<div class="outline-text-2" id="text-org6d68c26">
+<div id="outline-container-orgbb6b0ad" class="outline-2">
+<h2 id="orgbb6b0ad">magit-status</h2>
+<div class="outline-text-2" id="text-orgbb6b0ad">
 <p>
 현재 상태를 표시하는 UI를 띄웁니다. 개인적으로 magit 을 시작하는 가장 좋은
 방법으로 사용합니다.
@@ -99,9 +99,9 @@ Doom Emacs 에서는 <code>SPC g g</code>, Spacemacs 에서는 <code>SPC g s</co
 </p>
 </div>
 </div>
-<div id="outline-container-org67e0c00" class="outline-2">
-<h2 id="org67e0c00">Stage</h2>
-<div class="outline-text-2" id="text-org67e0c00">
+<div id="outline-container-orgdffc575" class="outline-2">
+<h2 id="orgdffc575">Stage</h2>
+<div class="outline-text-2" id="text-orgdffc575">
 <p>
 수정 내역에서 <code>s</code> 를 누르면 스테이징이 됩니다. 각 수정내역에서 <code>TAB</code> 을 누르면
 간단한 diff를 볼 수 있는데, 여기서 선택영역을 지정하고 <code>s</code> 를 누르면 선택 영역만
@@ -113,9 +113,9 @@ Doom Emacs 에서는 <code>SPC g g</code>, Spacemacs 에서는 <code>SPC g s</co
 </p>
 </div>
 </div>
-<div id="outline-container-org108f0e6" class="outline-2">
-<h2 id="org108f0e6">Commit</h2>
-<div class="outline-text-2" id="text-org108f0e6">
+<div id="outline-container-orgbe87215" class="outline-2">
+<h2 id="orgbe87215">Commit</h2>
+<div class="outline-text-2" id="text-orgbe87215">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 돌입합니다. 스테이징 된 파일들의 간략한 변경점을 볼
 수 있으며 커밋 메시지를 작성할 수 있습니다.
@@ -129,9 +129,9 @@ Doom Emacs 에서는 <code>SPC g g</code>, Spacemacs 에서는 <code>SPC g s</co
 </p>
 </div>
 </div>
-<div id="outline-container-orgfacdb8e" class="outline-2">
-<h2 id="orgfacdb8e">Log</h2>
-<div class="outline-text-2" id="text-orgfacdb8e">
+<div id="outline-container-org236d13f" class="outline-2">
+<h2 id="org236d13f">Log</h2>
+<div class="outline-text-2" id="text-org236d13f">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있습니다.
 </p>
@@ -141,25 +141,25 @@ Doom Emacs 에서는 <code>SPC g g</code>, Spacemacs 에서는 <code>SPC g s</co
 </p>
 </div>
 </div>
-<div id="outline-container-orgd6fcd08" class="outline-2">
-<h2 id="orgd6fcd08">Push</h2>
-<div class="outline-text-2" id="text-orgd6fcd08">
+<div id="outline-container-org3826615" class="outline-2">
+<h2 id="org3826615">Push</h2>
+<div class="outline-text-2" id="text-org3826615">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시가 됩니다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf352b2d" class="outline-2">
-<h2 id="orgf352b2d">Pull</h2>
-<div class="outline-text-2" id="text-orgf352b2d">
+<div id="outline-container-org541d8d7" class="outline-2">
+<h2 id="org541d8d7">Pull</h2>
+<div class="outline-text-2" id="text-org541d8d7">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀이 됩니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org58accb9" class="outline-2">
-<h2 id="org58accb9">Branch</h2>
-<div class="outline-text-2" id="text-org58accb9">
+<div id="outline-container-orgb77afde" class="outline-2">
+<h2 id="orgb77afde">Branch</h2>
+<div class="outline-text-2" id="text-orgb77afde">
 <ul class="org-ul">
 <li><code>b c</code> 로 브랜치를 생성합니다.</li>
 <li><code>b b</code> 로 브랜치를 전환합니다.</li>
@@ -167,18 +167,18 @@ Doom Emacs 에서는 <code>SPC g g</code>, Spacemacs 에서는 <code>SPC g s</co
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb3f5ba1" class="outline-2">
-<h2 id="orgb3f5ba1">기타</h2>
-<div class="outline-text-2" id="text-orgb3f5ba1">
+<div id="outline-container-orga937b56" class="outline-2">
+<h2 id="orga937b56">기타</h2>
+<div class="outline-text-2" id="text-orga937b56">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있습니다.</li>
 <li><a href="doom-emacs.html">Doom Emacs</a>에서 <code>SPC g s</code><sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup> 로 현재 파일의 변화내용을 스테이지할 수 있습니다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4223d1d" class="outline-2">
-<h2 id="org4223d1d">관련글</h2>
-<div class="outline-text-2" id="text-org4223d1d">
+<div id="outline-container-org2f249ce" class="outline-2">
+<h2 id="org2f249ce">관련글</h2>
+<div class="outline-text-2" id="text-org2f249ce">
 <ul class="org-ul">
 <li><a href="emacs.html">Emacs</a></li>
 <li><a href="doom-emacs.html">Doom Emacs</a></li>
@@ -198,6 +198,6 @@ status 단축키</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
