--- a/migrate-to-python3.html
+++ b/migrate-to-python3.html
@@ -41,27 +41,27 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org6b6ab83">이 글은</a></li>
-<li><a href="#org3607807">print 함수</a></li>
-<li><a href="#orge1bd47d">Long?</a></li>
-<li><a href="#org79eb07d">except 문법 변경</a></li>
-<li><a href="#orgd74474b">이름이나 구조가 바뀐 모듈들</a></li>
-<li><a href="#orgd5bd52e">관련글</a></li>
+<li><a href="#org21e27a5">이 글은</a></li>
+<li><a href="#orgaa7692b">print 함수</a></li>
+<li><a href="#org2fea0aa">Long?</a></li>
+<li><a href="#org0c0f896">except 문법 변경</a></li>
+<li><a href="#orgf1bf83d">이름이나 구조가 바뀐 모듈들</a></li>
+<li><a href="#org2b9a3bb">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-org6b6ab83" class="outline-2">
-<h2 id="org6b6ab83">이 글은</h2>
-<div class="outline-text-2" id="text-org6b6ab83">
+<div id="outline-container-org21e27a5" class="outline-2">
+<h2 id="org21e27a5">이 글은</h2>
+<div class="outline-text-2" id="text-org21e27a5">
 <p>
 별 다른 도구 없이 Python 2.x 코드를 Python 3.x 코드로 옮겨갈 때 개인적으로 겪었던 문제점 및 해결법을 간단하게 메모합니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org3607807" class="outline-2">
-<h2 id="org3607807">print 함수</h2>
-<div class="outline-text-2" id="text-org3607807">
+<div id="outline-container-orgaa7692b" class="outline-2">
+<h2 id="orgaa7692b">print 함수</h2>
+<div class="outline-text-2" id="text-orgaa7692b">
 <p>
 가장 대표적으로 print가 함수 형태로 바뀌었습니다.
 </p>
@@ -78,17 +78,17 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orge1bd47d" class="outline-2">
-<h2 id="orge1bd47d">Long?</h2>
-<div class="outline-text-2" id="text-orge1bd47d">
+<div id="outline-container-org2fea0aa" class="outline-2">
+<h2 id="org2fea0aa">Long?</h2>
+<div class="outline-text-2" id="text-org2fea0aa">
 <p>
 <code>123456678L</code> 처럼 긴 정수를 표현할 때 끝에 <code>L</code> 을 붙이는 경우도 있었는데 Python 3.x 에서는 이렇게 하면 오히려 오류가 납니다. 모든 큰 정수는 자동으로 BIG INTEGER가 되니 걱정하지 말고 <code>L</code> 을 떼어냅시다.
 </p>
 </div>
 </div>
-<div id="outline-container-org79eb07d" class="outline-2">
-<h2 id="org79eb07d">except 문법 변경</h2>
-<div class="outline-text-2" id="text-org79eb07d">
+<div id="outline-container-org0c0f896" class="outline-2">
+<h2 id="org0c0f896">except 문법 변경</h2>
+<div class="outline-text-2" id="text-org0c0f896">
 <p>
 예외처리 시 상세한 익셉션을 받아오는 인터페이스가 바뀌었습니다.
 </p>
@@ -115,9 +115,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orgd74474b" class="outline-2">
-<h2 id="orgd74474b">이름이나 구조가 바뀐 모듈들</h2>
-<div class="outline-text-2" id="text-orgd74474b">
+<div id="outline-container-orgf1bf83d" class="outline-2">
+<h2 id="orgf1bf83d">이름이나 구조가 바뀐 모듈들</h2>
+<div class="outline-text-2" id="text-orgf1bf83d">
 <ul class="org-ul">
 <li><code>Queue</code> 는 <code>queue.Queue</code> 로 소속이 바뀌었습니다.</li>
 <li><code>urlparse</code> 는 <code>urllib.parse</code> 로 이름과 소속이 바뀌었습니다.</li>
@@ -125,14 +125,14 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd5bd52e" class="outline-2">
-<h2 id="orgd5bd52e">관련글</h2>
-<div class="outline-text-2" id="text-orgd5bd52e">
+<div id="outline-container-org2b9a3bb" class="outline-2">
+<h2 id="org2b9a3bb">관련글</h2>
+<div class="outline-text-2" id="text-org2b9a3bb">
 <ul class="org-ul">
 <li><a href="python.html">Python</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
