--- a/swift-version-log.html
+++ b/swift-version-log.html
@@ -38,9 +38,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Swift 버전별 업데이트 내역</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header>
-<div id="outline-container-org900bb0d" class="outline-2">
-<h2 id="org900bb0d">5.1</h2>
-<div class="outline-text-2" id="text-org900bb0d">
+<div id="outline-container-orga8d2f29" class="outline-2">
+<h2 id="orga8d2f29">5.1</h2>
+<div class="outline-text-2" id="text-orga8d2f29">
 <p>
 블로그에 미리 정리해둔 글이 있는 관계로 링크만 정리합니다.
 </p>
@@ -59,14 +59,14 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org834addd" class="outline-2">
-<h2 id="org834addd">관련글</h2>
-<div class="outline-text-2" id="text-org834addd">
+<div id="outline-container-org8bb3085" class="outline-2">
+<h2 id="org8bb3085">관련글</h2>
+<div class="outline-text-2" id="text-org8bb3085">
 <ul class="org-ul">
 <li><a href="./swift.html">Swift</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
